// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test .puz import 2016-1-5-JosephCrosswords 1`] = `
Object {
  "clues": Object {
    "ALIST": "Celeb roster",
    "ALLEN": "Patriot Ethan",
    "ATONE": "Make amends",
    "BEDS": "Garden areas",
    "BOGS": "Marshy areas",
    "DENTIST": "Crown repairer",
    "EMERY": "Abrasive powder",
    "ENGARDE": "Fencing cry",
    "ERUDITE": "Learned",
    "ESE": "Language suffix",
    "ETHER": "Old anesthetic",
    "GLORY": "Renown",
    "GOSSIPS": "Idle talkers",
    "HAULS": "Moves, as freight",
    "HAVES": "Rich folks",
    "IDA": "Cider girl of song",
    "IMAGE": "Mirror sight",
    "ISAY": "'By Jove!'",
    "ITS": "'-- a Small World'",
    "LAM": "On the -- (fleeing)",
    "LET": "Rent out",
    "LOT": "Place to park",
    "MAYOR": "City leader",
    "MIA": "Farrow of film",
    "MIMED": "Acted wordlessly",
    "MISTYPE": "Hit the wrong key",
    "MOISTEN": "Make damp",
    "MONET": "'Water Lilies' painter",
    "PAGES": "Book parts",
    "PANACHE": "Flair",
    "PIG": "Sty resident",
    "PIPER": "Pan, for one",
    "POOR": "Destitute",
    "REEL": "Film unit",
    "REO": "Early auto",
    "RUN": "Baseball score",
    "SASSY": "Impudent",
    "SAT": "Used a couch",
    "SEEDY": "Run-down",
    "SEL": "Salt, to Simone",
    "SEPAL": "Flower part",
    "SNORKEL": "Breathing tube",
    "STRIKER": "One walking a line",
    "STRIVES": "Tries hard",
    "TED": "TV's Danson",
    "TRAY": "Waiter's aid",
    "TRI": "Numerical prefix",
    "ULCER": "Stomach woe",
    "VICTORYLAPS": "Winner's celebratory circuit",
    "VICTORYSIGN": "Churchill trademark",
  },
  "grid": Array [
    "H",
    "A",
    "U",
    "L",
    "S",
    ".",
    "M",
    "I",
    "M",
    "E",
    "D",
    "A",
    "L",
    "L",
    "E",
    "N",
    ".",
    "A",
    "T",
    "O",
    "N",
    "E",
    "V",
    "I",
    "C",
    "T",
    "O",
    "R",
    "Y",
    "S",
    "I",
    "G",
    "N",
    "E",
    "S",
    "E",
    ".",
    "R",
    "E",
    "O",
    ".",
    "S",
    "A",
    "T",
    "S",
    "T",
    "R",
    "I",
    "K",
    "E",
    "R",
    ".",
    "T",
    "R",
    "I",
    ".",
    ".",
    ".",
    "S",
    "E",
    "L",
    ".",
    "B",
    "E",
    "D",
    "S",
    "S",
    "E",
    "P",
    "A",
    "L",
    ".",
    "M",
    "O",
    "N",
    "E",
    "T",
    "T",
    "R",
    "A",
    "Y",
    ".",
    "P",
    "I",
    "G",
    ".",
    ".",
    ".",
    "R",
    "U",
    "N",
    ".",
    "G",
    "O",
    "S",
    "S",
    "I",
    "P",
    "S",
    "I",
    "D",
    "A",
    ".",
    "L",
    "O",
    "T",
    ".",
    "M",
    "I",
    "A",
    "V",
    "I",
    "C",
    "T",
    "O",
    "R",
    "Y",
    "L",
    "A",
    "P",
    "S",
    "E",
    "T",
    "H",
    "E",
    "R",
    ".",
    "P",
    "A",
    "G",
    "E",
    "S",
    "S",
    "E",
    "E",
    "D",
    "Y",
    ".",
    "E",
    "M",
    "E",
    "R",
    "Y",
  ],
  "height": 13,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "Joseph Crosswords, Jan 5, 2016",
  "width": 11,
}
`;

exports[`test .puz import 2016-1-5-ShefferCrosswords 1`] = `
Object {
  "clues": Object {
    "AAS": "TV remote batteries",
    "ADES": "Lime coolers",
    "AIDES": "Helpers",
    "ALEX": "'Jeopardy!' host",
    "AMEND": "Revise a contract",
    "ANO": "Acapulco year",
    "ANTE": "Pay to play poker",
    "AREACODE": "202 in Washington D.C., e.g.",
    "ARI": "Mr. Onassis, for short",
    "ARIZONA": "Grand Canyon State",
    "ARMREST": "Theater seat feature",
    "ARMYANTS": "Fighting insects",
    "ARSENIC": "' and Old Lace'",
    "ARTEMIS": "Apollo's sister",
    "ASE": "Enzyme's end",
    "ASTRAY": "Down a bad path",
    "ATM": "Cash dispenser (Abbr.)",
    "AXLE": "Car bar",
    "AYE": "Senate assent",
    "BLAM": "Toy gun noise",
    "CAT": "Friskies fan",
    "COD": "North Sea catch",
    "CRETE": "El Greco's birthplace",
    "CRO": "-Magnon",
    "ECLAIR": "Napoleon's kin?",
    "ELBA": "Exile isle",
    "EMMA": "Austen heroine",
    "ERA": "Eon fraction",
    "ERIE": "New York canal",
    "ERR": "Mess up",
    "EYE": "Storm center",
    "HAT": "Panama, e.g.",
    "INN": "Dew Drop",
    "LEDA": "Spartan queen",
    "LEER": "Lusty look",
    "MASC": "Fem. counterpart",
    "MEAT": "Steak house supply",
    "MELS": "Ott and Brooks",
    "MIDI": "Calf-length",
    "MISS": "Pageant title",
    "MOZART": "'Don Giovanni' composer",
    "NAE": "Scot's denial",
    "NEAR": "Close by",
    "OLEO": "Nondairy spread",
    "OVA": "Eggs, in labs",
    "PHASE": "Stage",
    "PRAISE": "Laud",
    "PRAM": "London buggy",
    "PTA": "Fundraising gp.",
    "RAND": "Writer Ayn",
    "RANI": "Hindu royal",
    "REAL": "Not fake",
    "SEAR": "Cook on high heat",
    "TART": "Fruit pie",
    "TEA": "4 p.m. social",
    "TEVYE": "'Fiddler on the Roof' father",
    "TORE": "Ripped",
    "UPS": "Raises",
    "URN": "Grecian vessel",
    "VAT": "Cask",
    "VET": "Doggie doc",
    "WAN": "Pallid",
    "WIT": "Humorist",
    "YAMS": "Orange veggies",
    "YAPS": "Talks on and on",
    "YELLS": "Hollers",
  },
  "grid": Array [
    "E",
    "L",
    "B",
    "A",
    ".",
    "P",
    "T",
    "A",
    ".",
    "P",
    "R",
    "A",
    "M",
    "M",
    "E",
    "L",
    "S",
    ".",
    "H",
    "A",
    "T",
    ".",
    "R",
    "A",
    "N",
    "I",
    "M",
    "E",
    "A",
    "T",
    ".",
    "A",
    "R",
    "M",
    "Y",
    "A",
    "N",
    "T",
    "S",
    "A",
    "R",
    "M",
    "R",
    "E",
    "S",
    "T",
    ".",
    "A",
    "I",
    "D",
    "E",
    "S",
    ".",
    ".",
    ".",
    "A",
    "Y",
    "E",
    ".",
    "U",
    "P",
    "S",
    ".",
    ".",
    ".",
    "T",
    "E",
    "V",
    "Y",
    "E",
    ".",
    "A",
    "R",
    "S",
    "E",
    "N",
    "I",
    "C",
    "E",
    "R",
    "A",
    ".",
    ".",
    "W",
    "A",
    "N",
    ".",
    ".",
    "A",
    "N",
    "O",
    "A",
    "R",
    "T",
    "E",
    "M",
    "I",
    "S",
    ".",
    "A",
    "M",
    "E",
    "N",
    "D",
    ".",
    ".",
    ".",
    "C",
    "A",
    "T",
    ".",
    "C",
    "R",
    "O",
    ".",
    ".",
    ".",
    "Y",
    "E",
    "L",
    "L",
    "S",
    ".",
    "A",
    "R",
    "I",
    "Z",
    "O",
    "N",
    "A",
    "A",
    "R",
    "E",
    "A",
    "C",
    "O",
    "D",
    "E",
    ".",
    "A",
    "L",
    "E",
    "X",
    "M",
    "I",
    "D",
    "I",
    ".",
    "V",
    "E",
    "T",
    ".",
    "R",
    "E",
    "A",
    "L",
    "S",
    "E",
    "A",
    "R",
    ".",
    "A",
    "S",
    "E",
    ".",
    "T",
    "O",
    "R",
    "E",
  ],
  "height": 13,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "Sheffer Crosswords, Jan 5, 2016",
  "width": 13,
}
`;

exports[`test .puz import 2016-1-5-USAToday 1`] = `
Object {
  "clues": Object {
    "ACE": "Royal flush card",
    "ACNE": "Facial breakout",
    "ADD": "Word heard in math class",
    "ADO": "Commotion",
    "AGE": "Historic time",
    "AIDE": "Candy striper, e.g.",
    "ALEE": "\\"Hard ___!\\" (ship command)",
    "APACE": "At a good clip",
    "ASAP": "\\"I need it now!\\" initials",
    "ASTOR": "Mary of \\"The Maltese Falcon\\"",
    "BEDSIDE": "Alarm clock's place",
    "BOAR": "Tusked pig",
    "BONED": "___ up on (studied)",
    "CANARDS": "False reports",
    "CUTER": "Likelier to win a baby contest",
    "DART": "Tavern missile",
    "DODO": "Bird that's more than rare",
    "DOME": "Round roof",
    "DONEE": "Heart recipient, e.g.",
    "EDIT": "Abridge",
    "EGGED": "Provoked (with \\"on\\")",
    "EPODE": "Form of lyric poem",
    "FORTH": "With \\"with,\\" pronto",
    "FUNK": "Dejected mood",
    "HANDEDOVER": "Ceded",
    "IDEA": "Matter for the gray matter",
    "INN": "Roadside lodging retreat",
    "IRE": "Anger",
    "IRK": "Aggravate",
    "KIDD": "Scottish pirate",
    "LAVA": "Mauna Loa outflow",
    "MATTE": "A photo finish",
    "MINDSET": "Fixed attitude",
    "NEO": "Keanu's role in three films",
    "NOVA": "Pulsating 64-Across",
    "ONCE": "Way less than thrice",
    "OOH": "\\"Aah!\\" accompaniment",
    "ORCA": "Killer whale of film",
    "PINTS": "Ale measures",
    "PITAS": "Bread pockets",
    "PORE": "Small hole in a sweater?",
    "PRODIGAL": "Like the son in a Biblical teaching",
    "PUGNOSED": "Having a blunt snoot",
    "RABAT": "Capital northeast of Casablanca",
    "RANT": "Carry on about",
    "REHAB": "Addiction center",
    "SAGA": "Long tale of derring-do, e.g.",
    "SAN": "___ Luis Obispo, Calif.",
    "SAUNA": "Hot place to relax",
    "SAWTHROUGH": "Recognized the deception in",
    "SHADE": "Good thing on a hot day",
    "SIGH": "World-weary sound",
    "SKAT": "Tricky game with 32 cards",
    "SLIT": "Buttonhole, e.g.",
    "SNOWEDUNDER": "Swamped with work",
    "STAB": "Wild guess",
    "STAR": "Wish receiver",
    "STINKO": "Awful, slangily",
    "STIR": "Cool coffee",
    "STOVE": "Ben Franklin innovation",
    "STOW": "Keep, as cargo",
    "STUCKAROUND": "Remained",
    "SWIM": "Do laps",
    "TACO": "Meat-filled tortilla",
    "TALK": "Radio format",
    "TARO": "Tropical starch",
    "TEAR": "Raze (with \\"down\\")",
    "TEENIER": "More petite",
    "TEHEE": "Little giggle",
    "TICKER": "Heart, slangily",
    "TILE": "Kitchen flooring unit",
    "TODO": "Heading on a list of errands",
    "TONAL": "Not dissonant, musically",
    "TORNADOS": "World's largest funnels",
    "TORTURES": "Causes great anguish",
    "ULNA": "Wrist holder",
    "URNS": "Coffeehouse items",
    "UTAH": "Where Bountiful is",
  },
  "grid": Array [
    "R",
    "E",
    "H",
    "A",
    "B",
    ".",
    "A",
    "S",
    "A",
    "P",
    ".",
    "S",
    "K",
    "A",
    "T",
    "A",
    "P",
    "A",
    "C",
    "E",
    ".",
    "S",
    "T",
    "I",
    "R",
    ".",
    "T",
    "I",
    "L",
    "E",
    "B",
    "O",
    "N",
    "E",
    "D",
    ".",
    "T",
    "O",
    "D",
    "O",
    ".",
    "I",
    "D",
    "E",
    "A",
    "A",
    "D",
    "D",
    ".",
    "S",
    "N",
    "O",
    "W",
    "E",
    "D",
    "U",
    "N",
    "D",
    "E",
    "R",
    "T",
    "E",
    "E",
    "N",
    "I",
    "E",
    "R",
    ".",
    ".",
    "I",
    "R",
    "K",
    ".",
    ".",
    ".",
    ".",
    ".",
    "D",
    "O",
    "D",
    "O",
    ".",
    "P",
    "U",
    "G",
    "N",
    "O",
    "S",
    "E",
    "D",
    "S",
    "T",
    "O",
    "V",
    "E",
    ".",
    "P",
    "I",
    "T",
    "A",
    "S",
    ".",
    "A",
    "D",
    "O",
    "L",
    "A",
    "V",
    "A",
    ".",
    "T",
    "O",
    "N",
    "A",
    "L",
    ".",
    "S",
    "W",
    "I",
    "M",
    "I",
    "R",
    "E",
    ".",
    "F",
    "O",
    "R",
    "T",
    "H",
    ".",
    "M",
    "A",
    "T",
    "T",
    "E",
    "T",
    "O",
    "R",
    "T",
    "U",
    "R",
    "E",
    "S",
    ".",
    "S",
    "I",
    "G",
    "H",
    ".",
    ".",
    ".",
    ".",
    ".",
    "I",
    "N",
    "N",
    ".",
    ".",
    "C",
    "A",
    "N",
    "A",
    "R",
    "D",
    "S",
    "S",
    "T",
    "U",
    "C",
    "K",
    "A",
    "R",
    "O",
    "U",
    "N",
    "D",
    ".",
    "O",
    "O",
    "H",
    "T",
    "A",
    "L",
    "K",
    ".",
    "D",
    "A",
    "R",
    "T",
    ".",
    "S",
    "A",
    "U",
    "N",
    "A",
    "A",
    "C",
    "N",
    "E",
    ".",
    "O",
    "N",
    "C",
    "E",
    ".",
    "E",
    "G",
    "G",
    "E",
    "D",
    "B",
    "O",
    "A",
    "R",
    ".",
    "S",
    "T",
    "A",
    "R",
    ".",
    "T",
    "E",
    "H",
    "E",
    "E",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "MOVE ON",
  "width": 15,
}
`;

exports[`test .puz import 2016-1-5-UniversalCrossword 1`] = `
Object {
  "clues": Object {
    "ABETS": "Assists in a crime",
    "ABLE": "Having sufficient skill",
    "ACHE": "Feel sore",
    "ACT": "Do one's part?",
    "ADO": "Rapid bustling movement",
    "ALEE": "Downwind, nautically",
    "ALLY": "Country friendly to yours",
    "ALSO": "\\"And another thing ...\\"",
    "ASH": "Baseball bat material",
    "ATLAS": "Book with maps",
    "AWING": "On ___ and a prayer",
    "BEYS": "Onetime Turkish governors",
    "BOA": "Long scarf",
    "CATENAS": "Chains of connected ideas or passages",
    "CIAO": "\\"See you, signore\\"",
    "COIF": "Salon work",
    "COMIC": "Laughable",
    "CUBE": "Die",
    "DASH": "Pinch of seasoning",
    "DRESS": "Bride's purchase",
    "ELUDE": "Cleverly avoid",
    "EMPTYAPARTMENTS": "What landlords hate",
    "ENDS": "Loose things to tie up?",
    "ENTER": "Put in",
    "ENTICES": "Tempts",
    "EONS": "Ages upon ages",
    "ERA": "Time span",
    "ESSAY": "English-class assignment",
    "FAB": "\\"Incredible!\\" to Beatle fans",
    "FULLEXPLANATION": "Complete account",
    "GENE": "Hackman of \\"Hoosiers\\"",
    "GINS": "Cotton-pickin' contraptions",
    "HALFTHEDISTANCE": "Radius, to diameter",
    "HARD": "Type of candy or cider",
    "HIPPO": "Zoo heavyweight, briefly",
    "HORN": "It's hit in traffic jams?",
    "HYPED": "Overpromoted",
    "INTRO": "Foreword, briefly",
    "LEAPT": "Was a bounder?",
    "LOAN": "Bit of bank business",
    "LODE": "Valuable vein",
    "MAPLE": "Syrup source",
    "MARINA": "Boat harbor",
    "MEANIE": "Villain",
    "MINXES": "Saucy misses",
    "NEW": "In mint condition",
    "NICHE": "Recessed area",
    "NINER": "San Fran pro",
    "OFFED": "Killed, mobster-style",
    "OPERA": "Musical drama",
    "ORCS": "Middle-Earth menaces",
    "PANE": "Window square",
    "PARE": "Strip a fruit",
    "ROY": "Scheider of \\"Jaws\\"",
    "SCREAM": "Roller coaster reaction",
    "SEROW": "Asian goatlike animal",
    "SHOWY": "Grandiose or flashy",
    "SILT": "River deposit",
    "SLIM": "Svelte",
    "SLUR": "Speak unclearly",
    "SOIL": "Where the worm turns",
    "SOYA": "Tofu bean (Var.)",
    "SPACEAGE": "Period beginning with Sputnik ",
    "SPIT": "Barbecue accessory",
    "SPOT": "Leopard feature",
    "SYSTEM": "Gambler's claim to beating the odds",
    "TAPER": "Grow narrower",
    "TEE": "Golf prop",
    "THE": "___ Lord's Prayer",
    "TIER": "Double-decker part",
    "TINE": "Pitchfork prong",
    "TITHE": "One-tenth payment",
    "TRAP": "Keep from escaping",
    "TRASHY": "Like some novels",
    "TRESTLES": "Railroad bridges",
    "TSAR": "Bygone despot",
  },
  "grid": Array [
    "A",
    "L",
    "S",
    "O",
    ".",
    "A",
    "T",
    "L",
    "A",
    "S",
    ".",
    "S",
    "P",
    "O",
    "T",
    "C",
    "O",
    "I",
    "F",
    ".",
    "S",
    "H",
    "O",
    "W",
    "Y",
    ".",
    "P",
    "A",
    "R",
    "E",
    "H",
    "A",
    "L",
    "F",
    "T",
    "H",
    "E",
    "D",
    "I",
    "S",
    "T",
    "A",
    "N",
    "C",
    "E",
    "E",
    "N",
    "T",
    "E",
    "R",
    ".",
    ".",
    "E",
    "N",
    "T",
    "I",
    "C",
    "E",
    "S",
    ".",
    ".",
    ".",
    ".",
    "D",
    "A",
    "S",
    "H",
    ".",
    "G",
    "E",
    "N",
    "E",
    ".",
    ".",
    ".",
    "A",
    "C",
    "T",
    ".",
    "S",
    "O",
    "I",
    "L",
    ".",
    "M",
    "E",
    "A",
    "N",
    "I",
    "E",
    "B",
    "O",
    "A",
    ".",
    "H",
    "Y",
    "P",
    "E",
    "D",
    ".",
    ".",
    "G",
    "I",
    "N",
    "S",
    "E",
    "M",
    "P",
    "T",
    "Y",
    "A",
    "P",
    "A",
    "R",
    "T",
    "M",
    "E",
    "N",
    "T",
    "S",
    "T",
    "I",
    "E",
    "R",
    ".",
    ".",
    "O",
    "P",
    "E",
    "R",
    "A",
    ".",
    "E",
    "R",
    "A",
    "S",
    "C",
    "R",
    "E",
    "A",
    "M",
    ".",
    "T",
    "S",
    "A",
    "R",
    ".",
    "R",
    "O",
    "Y",
    ".",
    ".",
    ".",
    "S",
    "L",
    "I",
    "M",
    ".",
    "S",
    "P",
    "I",
    "T",
    ".",
    ".",
    ".",
    ".",
    "C",
    "A",
    "T",
    "E",
    "N",
    "A",
    "S",
    ".",
    ".",
    "N",
    "I",
    "C",
    "H",
    "E",
    "F",
    "U",
    "L",
    "L",
    "E",
    "X",
    "P",
    "L",
    "A",
    "N",
    "A",
    "T",
    "I",
    "O",
    "N",
    "A",
    "B",
    "L",
    "E",
    ".",
    "E",
    "L",
    "U",
    "D",
    "E",
    ".",
    "H",
    "A",
    "R",
    "D",
    "B",
    "E",
    "Y",
    "S",
    ".",
    "S",
    "E",
    "R",
    "O",
    "W",
    ".",
    "E",
    "O",
    "N",
    "S",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "GET YOUR FILL",
  "width": 15,
}
`;

exports[`test .puz import 2016-1-31-LosAngelesTimes 1`] = `
Object {
  "clues": Object {
    "AARE": "Rhein tributary",
    "ACTSTHEPART": "Does as expected",
    "AFRO": "Hendrix hairdo",
    "ALFALFAS": "\\"__ Aunt\\": Little Rascals short",
    "ALONSO": "King in \\"The Tempest\\"",
    "ANY": "Undefined number",
    "APED": "Mimicked",
    "ARES": "Olympic hawk",
    "ARFS": "Shelter sounds",
    "ARMEE": "Napoleon's légion",
    "ARPELS": "Van Cleef & __: French jeweler/perfumer",
    "ARRAS": "Polonius hid behind one",
    "ARTDIRECTOR": "Production design team member",
    "ASEC": "Time to hang on?",
    "ASLAN": "\\"The Lord of the whole wood,\\" per Mr. Beaver",
    "ATATILT": "Leaning",
    "ATRA": "Razor brand",
    "AVIS": "Alamo competitor",
    "AVOW": "Declare frankly",
    "AWED": "Blown away",
    "AYN": "Objectivism advocate Rand",
    "BOILS": "Starts to bubble, maybe",
    "BROS": "Warner __",
    "BUDS": "Future flowers",
    "CEO": "Board VIP",
    "CIRCLEOFFRIENDS": "Clique",
    "COOS": "Sweet talk",
    "COVE": "Sheltered area",
    "COWL": "Monastery garb",
    "CVI": "MLX ÷ X",
    "DAFFY": "Black toon duck",
    "DATE": "Dinner __",
    "DEB": "Ball girl",
    "DEN": "Thieves' room?",
    "DOCTORATE": "High degree",
    "DOE": "Forest female",
    "DRAFTS": "They may be rough",
    "ELAL": "Hebrew for \\"skyward\\"",
    "EMMA": "Mr. Knightley's wife, in the novel of the same name",
    "ERDRICH": "Louise __, National Book Award winner for \\"The Round House\\"",
    "ETC": "List-limiting letters",
    "EVERANDANON": "Occasionally",
    "EWE": "Farm girl",
    "FEDEXING": "Shipping overnight, perhaps",
    "FEDORA": "Sinatra trademark",
    "FIG": "Fruit often dried",
    "FRAT": "Rites group",
    "GODOT": "Titular character with no lines",
    "GOESFAR": "Makes it big",
    "HANA": "Mandlikova of '80s tennis",
    "HASP": "Trunk hardware",
    "HEE": "Bit of a chuckle",
    "HENRI": "Painter Rousseau",
    "HIHO": "Greeting from Kermit",
    "IER": "Suffix with front",
    "IFN": "Dogpatch conditional",
    "IFSO": "\\"Assuming that's true ... \\"",
    "INBETA": "Still being tested, as software",
    "INCA": "Empire with provinces called suyu",
    "IRENE": "Actress Ryan",
    "IRS": "It receives many returns: Abbr.",
    "IRWINSHAW": "\\"The Young Lions\\" novelist",
    "ISNO": "\\"There __ darkness but ignorance\\": \\"Twelfth Night\\"",
    "KIR": "Cassis aperitif",
    "LETSAT": "Sics on",
    "LEX": "Superman nemesis Luthor",
    "LGES": "Sweater sizes: Abbr.",
    "LILA": "Country singer McCann",
    "LIMOS": "Rides to the prom",
    "MARES": "Farm girls",
    "MASTEROF": "With \\"a,\\" eminently skilled at, as disguise",
    "MED": "__ center",
    "MOHR": "Comic Jay",
    "NANA": "Gram",
    "NARC": "Certain undercover cop",
    "NEAR": "Close",
    "NFL": "32-team gp.",
    "NRA": "Food service trade org.",
    "NYET": "\\"My eye!\\" in Minsk",
    "OAT": "Meal opener",
    "OFFCENTER": "Misaligned ... or, literally, a perfectly aligned aspect of seven answers in this puzzle",
    "OFTEN": "Quite a bit",
    "OHSO": "Extremely",
    "OHYEAH": "Common rejoinder in one-upmanship",
    "OILER": "NFL Titan, before 1999",
    "OLAN": "\\"The Good Earth\\" wife",
    "ONE": "Teen's opening number?",
    "OPIE": "Andy's son",
    "ORCAS": "Black-and-white swimmers",
    "ORNOT": "\\"But I could be wrong\\"",
    "ORO": "Granada gold",
    "OSTRACISM": "Exclusion",
    "OTAY": "Our Gang assent",
    "PEACEOFFERING": "Olive branch",
    "PRIMER": "Easy read",
    "PROLIFE": "Hot-button political platform term",
    "PROW": "Frigate front",
    "REPEATOFFENDERS": "Recidivists",
    "RHFACTOR": "Blood typing concern",
    "ROAN": "Reddish horse",
    "ROAR": "Stadium shaker",
    "ROMO": "Quarterback Tony",
    "ROOF": "Where shakes may be seen",
    "ROOK": "Cheat",
    "ROOT": "Source",
    "SCAB": "Wound covering",
    "SEP": "NFL season opening mo.",
    "SEW": "Put in stitches",
    "SHIPOFFOOLS": "Vivien Leigh's last film",
    "SHOWOFFORCE": "Powerful display",
    "SLAW": "Picnic side",
    "SLIMINESS": "Severe disrepute",
    "SMA": "Wee",
    "SMIRNOFFVODKA": "Red Label spirits",
    "SNIDE": "Not nice at all",
    "SOHOWAREYOU": "\\"But enough about me\\" follower",
    "SOR": "49-Down counterpart: Abbr.",
    "SPARETIRE": "External Jeep attachment",
    "STAMOS": "\\"Full House\\" actor",
    "STE": "Fr. holy woman",
    "SWAT": "Crisis team acronym",
    "SWEATSHIRTS": "Resort area souvenirs",
    "TANNER": "Worker with hides",
    "TEATS": "Udder parts",
    "TGI": "Letters before F?",
    "THAW": "Become less hostile",
    "THEOFFICE": "Place of business",
    "TOCOME": "In the future",
    "TOE": "Place for a nail",
    "TON": "Heap",
    "TOOKLEAVEOF": "Said farewell to",
    "TSOS": "General __ chicken",
    "TTOP": "Camaro option",
    "TUNIC": "Ancient Roman garment",
    "TWANGY": "Like some guitar music",
    "UNRAVELED": "Came apart",
    "VASCO": "Explorer __ da Gama",
    "VIS": "Meas. reduced by fog",
    "VOA": "U.S. govt. broadcaster",
    "WAFT": "Be carried gently",
    "WAR": "Major conflict",
    "WVA": "Mountain State: Abbr.",
  },
  "grid": Array [
    "A",
    "S",
    "E",
    "C",
    ".",
    "D",
    "A",
    "T",
    "E",
    ".",
    ".",
    "H",
    "A",
    "S",
    "P",
    ".",
    ".",
    "B",
    "U",
    "D",
    "S",
    "C",
    "O",
    "V",
    "E",
    ".",
    "A",
    "V",
    "O",
    "W",
    ".",
    "O",
    "I",
    "L",
    "E",
    "R",
    ".",
    "O",
    "R",
    "N",
    "O",
    "T",
    "T",
    "H",
    "E",
    "O",
    "F",
    "F",
    "I",
    "C",
    "E",
    ".",
    "S",
    "H",
    "O",
    "W",
    "O",
    "F",
    "F",
    "O",
    "R",
    "C",
    "E",
    "S",
    "O",
    "R",
    ".",
    "I",
    "F",
    "S",
    "O",
    ".",
    ".",
    "T",
    "O",
    "N",
    ".",
    "L",
    "E",
    "T",
    "S",
    "A",
    "T",
    ".",
    "T",
    "W",
    "A",
    "N",
    "G",
    "Y",
    ".",
    "M",
    "O",
    "H",
    "R",
    ".",
    "S",
    "N",
    "I",
    "D",
    "E",
    ".",
    "V",
    "O",
    "A",
    "H",
    "A",
    "N",
    "A",
    ".",
    ".",
    "R",
    "E",
    "P",
    "E",
    "A",
    "T",
    "O",
    "F",
    "F",
    "E",
    "N",
    "D",
    "E",
    "R",
    "S",
    "E",
    "R",
    "D",
    "R",
    "I",
    "C",
    "H",
    ".",
    "I",
    "N",
    "C",
    "A",
    ".",
    "L",
    "E",
    "X",
    ".",
    "E",
    "L",
    "A",
    "L",
    "P",
    "E",
    "A",
    "C",
    "E",
    "O",
    "F",
    "F",
    "E",
    "R",
    "I",
    "N",
    "G",
    ".",
    ".",
    "I",
    "N",
    "B",
    "E",
    "T",
    "A",
    "A",
    "Y",
    "N",
    ".",
    "R",
    "O",
    "A",
    "R",
    ".",
    "I",
    "S",
    "N",
    "O",
    ".",
    "A",
    "N",
    "Y",
    ".",
    "D",
    "E",
    "N",
    "R",
    "O",
    "O",
    "K",
    ".",
    "S",
    "C",
    "A",
    "B",
    ".",
    "M",
    "E",
    "D",
    ".",
    "L",
    "G",
    "E",
    "S",
    ".",
    ".",
    ".",
    "T",
    "U",
    "N",
    "I",
    "C",
    ".",
    "T",
    "T",
    "O",
    "P",
    ".",
    "R",
    "O",
    "O",
    "F",
    ".",
    "T",
    "E",
    "A",
    "T",
    "S",
    ".",
    ".",
    ".",
    "R",
    "O",
    "M",
    "O",
    ".",
    "I",
    "R",
    "S",
    ".",
    "T",
    "H",
    "A",
    "W",
    ".",
    "P",
    "R",
    "O",
    "W",
    "V",
    "I",
    "S",
    ".",
    "W",
    "A",
    "R",
    ".",
    "L",
    "I",
    "L",
    "A",
    ".",
    "S",
    "L",
    "A",
    "W",
    ".",
    "T",
    "O",
    "E",
    "A",
    "R",
    "P",
    "E",
    "L",
    "S",
    ".",
    ".",
    "S",
    "M",
    "I",
    "R",
    "N",
    "O",
    "F",
    "F",
    "V",
    "O",
    "D",
    "K",
    "A",
    "S",
    "W",
    "A",
    "T",
    ".",
    "T",
    "G",
    "I",
    ".",
    "E",
    "M",
    "M",
    "A",
    ".",
    "A",
    "T",
    "A",
    "T",
    "I",
    "L",
    "T",
    "C",
    "I",
    "R",
    "C",
    "L",
    "E",
    "O",
    "F",
    "F",
    "R",
    "I",
    "E",
    "N",
    "D",
    "S",
    ".",
    ".",
    "A",
    "R",
    "E",
    "S",
    "O",
    "N",
    "E",
    ".",
    "I",
    "R",
    "E",
    "N",
    "E",
    ".",
    "N",
    "E",
    "A",
    "R",
    ".",
    "O",
    "H",
    "Y",
    "E",
    "A",
    "H",
    ".",
    "S",
    "T",
    "A",
    "M",
    "O",
    "S",
    ".",
    "D",
    "O",
    "E",
    ".",
    ".",
    "A",
    "A",
    "R",
    "E",
    ".",
    "C",
    "V",
    "I",
    "S",
    "H",
    "I",
    "P",
    "O",
    "F",
    "F",
    "O",
    "O",
    "L",
    "S",
    ".",
    "O",
    "F",
    "F",
    "C",
    "E",
    "N",
    "T",
    "E",
    "R",
    "M",
    "A",
    "R",
    "E",
    "S",
    ".",
    "A",
    "R",
    "R",
    "A",
    "S",
    ".",
    "A",
    "T",
    "R",
    "A",
    ".",
    "R",
    "O",
    "O",
    "T",
    "A",
    "W",
    "E",
    "D",
    ".",
    ".",
    "R",
    "O",
    "A",
    "N",
    ".",
    ".",
    "T",
    "S",
    "O",
    "S",
    ".",
    "A",
    "R",
    "F",
    "S",
  ],
  "height": 21,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "LA Times, Sun, Jan 31, 2016 - \\"Misaligned\\"",
  "width": 21,
}
`;

exports[`test .puz import 2016-1-31-Newsday 1`] = `
Object {
  "clues": Object {
    "ABLY": "With proficiency",
    "ABOW": "Take __ (acknowledge applause)",
    "ACMES": "Ultimate heights",
    "ACUMEN": "Quick-wittedness",
    "AISLE": "Arena walkway",
    "ALE": "Filler of 34 Across",
    "ALLI": "''. . . for __ know''",
    "AMBIENT": "Environmental",
    "ANTSY": "Visibly impatient",
    "AREA": "Field of expertise",
    "ARES": "Trojan War instigator",
    "ARTS": "Muses' domain",
    "ATTIC": "Home office locale, maybe",
    "AUGUST": "Hot time",
    "AWESOME": "Overused compliment",
    "AWLS": "Leatherworking tools",
    "AXIS": "Rotational line",
    "BABAR": "Kid-lit elephant",
    "BASSTUBA": "Part of the brass section",
    "BELALUGOSI": "Martin Landau (1994)",
    "BENBRADLEE": "Jason Robards (1976)",
    "BINET": "IQ test developer",
    "BIZ": "Industry, informally",
    "BORES": "Drills (through)",
    "BUNT": "Diamond ploy",
    "BVITAMIN": "Folic acid, for one",
    "CALAMINE": "Ointment ingredient",
    "CEDE": "Sign over",
    "CIRCA": "Word usually seen before a date",
    "DCI": "Start of the 7th century",
    "DEIST": "Jefferson, religiously",
    "DRAMA": "Emmy category",
    "DRESSY": "For formal occasions",
    "DROP": "Take a fall",
    "EARL": "British noble",
    "EBBED": "Tapered off",
    "ELIZABETHII": "Helen Mirren (2006)",
    "EMMAGOLDMAN": "Maureen Stapleton (1981)",
    "EYRE": "Fictional governess",
    "FERNS": "Sources of spores",
    "FIEFS": "Feudal domains",
    "GIN": "Whitney's claim to fame",
    "GOODS": "Merchandise",
    "GSEVEN": "Economic coalition",
    "HADES": "Mythical underworld",
    "HAREM": "Sultan's wives",
    "HARES": "''Snowshoe'' hoppers",
    "HARSH": "Unkind",
    "HAYDN": "Teacher of Beethoven",
    "HELENKELLER": "Patty Duke (1962)",
    "HID": "Camouflaged",
    "HMOS": "Med. insurance systems",
    "IAGO": "Shakespearean schemer",
    "IMEAN": "Clarification starter",
    "IONESCO": "Absurdist playwright",
    "IRA": "Funds for the future",
    "ISEE": "''Got it now''",
    "IVIES": "Wall climbers",
    "JAKELAMOTTA": "Robert De Niro (1980)",
    "JILTS": "Casts aside",
    "KGBSPIES": "Frequent 007 adversaries",
    "KNESSET": "Israel's legislature",
    "LAMAR": "Truman's birthplace",
    "LAPEL": "Carnation location",
    "LATER": "Informal farewell",
    "LAURA": "Name on the ''Little House'' books",
    "LEMON": "Gelato flavor",
    "LINETWO": "Office extension",
    "LOGAN": "Boston airport",
    "LORETTALYNN": "Sissy Spacek (1980)",
    "LOSE": "Come up short",
    "MALLS": "100-store complexes",
    "MEARA": "Ben Stiller's mom",
    "NAILS": "Fastens securely",
    "NANA": "Granny",
    "NEAP": "Lowest high tide",
    "NOREASON": "''Just 'cause I felt like it''",
    "NOSE": "Mr. Potato Head piece",
    "ODES": "Lyrical tributes",
    "OHARE": "Chicago airport",
    "OKRA": "Podded plant",
    "OLDIE": "Blast from the past",
    "ONTAP": "In readiness",
    "OOHS": "Sounds amazed",
    "OPTED": "Withdrew, with ''out''",
    "ORCA": "Predatory dolphin",
    "PAINTPOT": "Cosmetics container",
    "PARA": "Legal aide, for short",
    "PASCAL": "France's answer to da Vinci",
    "PAULGAUGUIN": "Anthony Quinn (1956)",
    "PAVES": "Does road work",
    "PEEL": "Spa treatment",
    "PEER": "British noble",
    "PLEAS": "Court hearings?",
    "POINTY": "Tapering fully",
    "RADAR": "Detection device",
    "RAKE": "Casino chip collector",
    "RANT": "Let off steam",
    "RASTA": "Ska fan, perhaps",
    "RATA": "Pro __ (proportionally)",
    "RAYCHARLES": "Jamie Foxx (2004)",
    "ROE": "Sushi spread",
    "ROLFE": "Pocahontas' hubby",
    "ROMPS": "Frolics",
    "ROUGES": "38 Across contents",
    "SEASPRAY": "Cause of coastline corrosion",
    "SERPENT": "Genesis villain",
    "SHIN": "Tibia's place",
    "SINKS": "Takes a fall",
    "SKIPANTS": "Snowmass sportswear",
    "SNAPBEAN": "Podded plant",
    "SORT": "Order properly",
    "SOUSA": "March master",
    "SPLIT": "Take off",
    "SPOCK": "Pediatrician/author",
    "SPURT": "Brief effort",
    "STABS": "Tentative efforts",
    "STEINS": "Pubware",
    "STINK": "Perform poorly",
    "SUBS": "Sandwiches or stand-ins",
    "SUDS": "Filler of 34 Across",
    "TAKEN": "Not available",
    "TALK": "Radio station format",
    "TAPAS": "Spanish dim sum",
    "TEENY": "Barely visible",
    "TESTS": "Experiments",
    "THOMASMORE": "Paul Scofield (1966)",
    "TOE": "Tip of a boot",
    "TOLET": "Landlord's sign",
    "TOOT": "Tugboat sound",
    "TOXIN": "Venom, for instance",
    "UCONN": "Nutmeg State sch.",
    "UHOH": "''This doesn't look good''",
    "USAGE": "Utility bill datum",
    "WENTYARD": "Hit a homer, slangily",
    "WHOM": "Second word of a Hemingway title",
    "WIDE": "Spacious",
    "WISP": "Faint trace",
    "ZEROG": "Space-shot state, for short",
    "ZOOEY": "Actress Deschanel",
  },
  "grid": Array [
    "S",
    "I",
    "N",
    "K",
    "S",
    ".",
    "R",
    "A",
    "T",
    "A",
    ".",
    "A",
    "T",
    "T",
    "I",
    "C",
    ".",
    "A",
    "W",
    "L",
    "S",
    "U",
    "S",
    "A",
    "G",
    "E",
    ".",
    "A",
    "B",
    "O",
    "W",
    ".",
    "M",
    "E",
    "A",
    "R",
    "A",
    ".",
    "U",
    "H",
    "O",
    "H",
    "B",
    "E",
    "N",
    "B",
    "R",
    "A",
    "D",
    "L",
    "E",
    "E",
    ".",
    "B",
    "E",
    "L",
    "A",
    "L",
    "U",
    "G",
    "O",
    "S",
    "I",
    "S",
    "E",
    "A",
    "S",
    "P",
    "R",
    "A",
    "Y",
    ".",
    "S",
    "T",
    "I",
    "N",
    "K",
    ".",
    "A",
    "C",
    "U",
    "M",
    "E",
    "N",
    ".",
    ".",
    ".",
    "P",
    "E",
    "E",
    "R",
    ".",
    "Z",
    "O",
    "O",
    "E",
    "Y",
    ".",
    "H",
    "M",
    "O",
    "S",
    ".",
    ".",
    ".",
    "S",
    "T",
    "E",
    "I",
    "N",
    "S",
    ".",
    "L",
    "E",
    "M",
    "O",
    "N",
    ".",
    "P",
    "A",
    "I",
    "N",
    "T",
    "P",
    "O",
    "T",
    "T",
    "O",
    "L",
    "E",
    "T",
    ".",
    "L",
    "O",
    "R",
    "E",
    "T",
    "T",
    "A",
    "L",
    "Y",
    "N",
    "N",
    ".",
    "A",
    "L",
    "E",
    "A",
    "X",
    "I",
    "S",
    ".",
    "I",
    "A",
    "G",
    "O",
    ".",
    ".",
    ".",
    "C",
    "E",
    "D",
    "E",
    ".",
    "S",
    "U",
    "D",
    "S",
    "B",
    "I",
    "Z",
    ".",
    "E",
    "M",
    "M",
    "A",
    "G",
    "O",
    "L",
    "D",
    "M",
    "A",
    "N",
    ".",
    "S",
    "P",
    "L",
    "I",
    "T",
    "S",
    "N",
    "A",
    "P",
    "B",
    "E",
    "A",
    "N",
    ".",
    "H",
    "A",
    "R",
    "E",
    "S",
    ".",
    "R",
    "O",
    "U",
    "G",
    "E",
    "S",
    ".",
    ".",
    "B",
    "A",
    "B",
    "A",
    "R",
    ".",
    "T",
    "A",
    "P",
    "A",
    "S",
    ".",
    "L",
    "A",
    "U",
    "R",
    "A",
    ".",
    ".",
    "G",
    "S",
    "E",
    "V",
    "E",
    "N",
    ".",
    "H",
    "A",
    "R",
    "E",
    "M",
    ".",
    "B",
    "A",
    "S",
    "S",
    "T",
    "U",
    "B",
    "A",
    "O",
    "P",
    "T",
    "E",
    "D",
    ".",
    "J",
    "A",
    "K",
    "E",
    "L",
    "A",
    "M",
    "O",
    "T",
    "T",
    "A",
    ".",
    "G",
    "I",
    "N",
    "O",
    "O",
    "H",
    "S",
    ".",
    "W",
    "I",
    "D",
    "E",
    ".",
    ".",
    ".",
    "A",
    "R",
    "E",
    "A",
    ".",
    "B",
    "U",
    "N",
    "T",
    "D",
    "C",
    "I",
    ".",
    "H",
    "E",
    "L",
    "E",
    "N",
    "K",
    "E",
    "L",
    "L",
    "E",
    "R",
    ".",
    "I",
    "V",
    "I",
    "E",
    "S",
    "S",
    "K",
    "I",
    "P",
    "A",
    "N",
    "T",
    "S",
    ".",
    "N",
    "A",
    "I",
    "L",
    "S",
    ".",
    "P",
    "O",
    "I",
    "N",
    "T",
    "Y",
    ".",
    ".",
    ".",
    "A",
    "R",
    "T",
    "S",
    ".",
    "F",
    "E",
    "R",
    "N",
    "S",
    ".",
    "R",
    "A",
    "N",
    "T",
    ".",
    ".",
    ".",
    "D",
    "R",
    "E",
    "S",
    "S",
    "Y",
    ".",
    "A",
    "I",
    "S",
    "L",
    "E",
    ".",
    "N",
    "O",
    "R",
    "E",
    "A",
    "S",
    "O",
    "N",
    "R",
    "A",
    "Y",
    "C",
    "H",
    "A",
    "R",
    "L",
    "E",
    "S",
    ".",
    "T",
    "H",
    "O",
    "M",
    "A",
    "S",
    "M",
    "O",
    "R",
    "E",
    "O",
    "K",
    "R",
    "A",
    ".",
    "R",
    "O",
    "L",
    "F",
    "E",
    ".",
    "W",
    "I",
    "S",
    "P",
    ".",
    "C",
    "I",
    "R",
    "C",
    "A",
    "P",
    "E",
    "E",
    "L",
    ".",
    "D",
    "E",
    "I",
    "S",
    "T",
    ".",
    "O",
    "D",
    "E",
    "S",
    ".",
    "O",
    "N",
    "T",
    "A",
    "P",
  ],
  "height": 21,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "REENACTMENTS: Real-people Oscar roles",
  "width": 21,
}
`;

exports[`test .puz import Feb0308_oddnumbering 1`] = `
Object {
  "clues": Object {
    "AANDE": "\\"Biography\\" network",
    "ACC": "Blue Devils' and Tigers' org.",
    "AGOGO": "Disco term meaning \\"galore\\"",
    "AILEY": "Dancer Alvin",
    "ALETA": "Prince Valiant's wife",
    "ALLA": "\\"Enough!\\"",
    "ALREADY": "-",
    "AMARYLLIS": "Flower also called a naked lady",
    "ANE": "Hydrocarbon suffix",
    "ARTURO": "Hero of Bellini's \\"I Puritani\\"",
    "ATLANTA": "Setting for \\"Driving Miss Daisy\\"",
    "AUK": "Arctic diver",
    "AWAIT": "Anticipate",
    "CAKES": "-",
    "CARRIE": "___ Bradshaw, \\"Sex and the City\\" role",
    "CIMOC": "-",
    "CIR": "Geom. figure",
    "CLAN": "Family",
    "CLEANSE": "Deterge",
    "COOL": "Collected",
    "COURTESAN": "Mistress",
    "DAY": "Word before and after \\"after\\"",
    "DEADON": "Totally accurate",
    "DEEPS": "-",
    "DELI": "Hero maker",
    "DESPISE": "Execrate",
    "DEUS": "Jupiter or Mars",
    "DINE": "Feast",
    "DLEIF": "-",
    "DOONE": "Literature's Lorna",
    "EARHART": "Subject of the book \\"Last Flight\\"",
    "EASEONT": "Popular song from Broadway's \\"The Wiz\\"",
    "EDASNER": "Mary Tyler Moore co-star",
    "EHUD": "Israeli P.M. Olmert",
    "ELEONORA": "Autobiographical short story by Edgar Allan Poe",
    "ENE": "Anchorage-to-Fairbanks dir.",
    "ENOLA": "___ Gay, W.W. II bomber",
    "ERESTU": "1974 Mocedades hit",
    "ERNEST": "One of wine's Gallo brothers",
    "ERODE": "Lose little by little",
    "ERRS": "Slips",
    "ERST": "First, in Frankfurt",
    "EXTREMEW": "Reactionary",
    "FERN": "Fronded plant",
    "FLAK": "Slams",
    "FLECKS": "Evidence of dandruff",
    "GER": "Neighbor of Switz.",
    "GREMLIN": "Imp",
    "HANSOM": "Two-wheeled covered carriage",
    "HARDLOOK": "Careful consideration",
    "HELLO": "\\"___, gorgeous!\\" (Fanny Brice's comment to herself when looking in the mirror)",
    "HTTP": "U.R.L. lead-in",
    "IDEAS": "They may be funny or bright",
    "IMNO": "\\"___ Angel,\\" 1933 film",
    "INLAY": "Dental filling",
    "JEER": "Raspberry",
    "JOININ": "Become part of",
    "KINGLEAR": "Repeated John Gielgud role",
    "LANOLIN": "Ointment ingredient",
    "LEOII": "Sainted pope of A.D. 683",
    "LIARLIAR": "1997 Jim Carrey film",
    "LLOYD": "Bridges in Hollywood",
    "LOFT": "Artist's digs, maybe",
    "LOOS": "Elton's johns",
    "LORD": "Lady's man",
    "LOUTS": "Lugs",
    "MAES": "Fannie ___ (securities)",
    "MALAWI": "Lake ___, third-largest lake in Africa",
    "MALI": "French Sudan, today",
    "MISLED": "Threw off the scent",
    "MOESHA": "Sitcom title role for Brandy Norwood",
    "MONTESSORI": "Educator Maria",
    "MSGR": "Relig. title",
    "NAGS": "Scratch sheet listings",
    "NEMO": "Fictional submariner",
    "NISAN": "Month before Iyar",
    "NTUPLE": "Mathematical sequence of unknown length",
    "OASIS": "Place to get dates?",
    "OASTS": "Hops-drying kilns",
    "OHM": "Eponymous German electrophysicist",
    "OLEO": "Spread in a spread",
    "OLMEC": "Ancient Mexican people",
    "ONEFLESH": "What a man and a woman become in marriage",
    "OSTOSIS": "Bone formation",
    "OUTINF": "Quite wrong",
    "PALEO": "Prefix with -zoic",
    "PANED": "Sectioned, as a window",
    "PASHAS": "Turkish pooh-bahs",
    "PAYEES": "Check list?",
    "PEARLS": "Things on strings",
    "PEN": "Cross product",
    "PER": "A pop",
    "PICKEDS": "Accelerated",
    "PION": "Subatomic particle that is a nuclear binder",
    "POHS": "-",
    "POPGUN": "Cork shooter",
    "RIAL": "Mideast money",
    "ROSIER": "More encouraging",
    "SAGE": "Wise",
    "SAILS": "Breezes (through)",
    "SALES": "Business position",
    "SALINES": "Contact lens solutions",
    "SATIE": "\\"Socrate\\" composer",
    "SEE": "Call, or call on",
    "SELMA": "Civil rights march site, 1965",
    "SETTINGS": "Establishing a business",
    "SLAT": "Blind element",
    "SMELLY": "Malodorous",
    "SNEE": "Old dirk",
    "SOCK": "Punch",
    "SODAASH": "Na2CO3",
    "SOS": "Titanic message",
    "SPATES": "Runs",
    "SPAWNS": "Begets",
    "SPOSE": "Imagine, informally",
    "STALE": "Passé",
    "STANDC": "Seinfeld, for one",
    "STE": "Canonized mlle.",
    "STEAK": "Turf, as opposed to surf",
    "STERLING": "Unblemished",
    "STRAIN": "Lineage",
    "SUN": "Great ball of fire",
    "SUPRAS": "Classic Toyota sports cars",
    "SWOON": "Stereotypical reaction to Elvis",
    "TEEF": "-",
    "THEROAD": "-",
    "TIECLIPS": "Men's fashion accessories",
    "TIS": "Third word of \\"America\\"",
    "TOES": "The \\"ten\\" in \\"hang ten\\"",
    "TOILETS": "Facilities",
    "TOMEI": "Marisa of \\"What Women Want\\"",
    "TRIAD": "Wynken, Blynken and Nod, e.g.",
    "TWOF": "Bad dancer's handicap",
    "TWOHEADS": "They're better than one",
    "ULAN": "___ Bator",
    "UPSIDEC": "Pineapple desserts",
    "WEAKNESSES": "Failings",
    "WEFTS": "Tapestry threads",
    "WING": "-",
    "XMEN": "Magneto's adversaries, in comic books",
  },
  "grid": Array [
    ".",
    "L",
    "O",
    "F",
    "T",
    ".",
    "D",
    "E",
    "A",
    "D",
    "O",
    "N",
    ".",
    ".",
    "U",
    "P",
    "S",
    "I",
    "D",
    "E",
    "C",
    "H",
    "E",
    "L",
    "L",
    "O",
    ".",
    "E",
    "R",
    "N",
    "E",
    "S",
    "T",
    ".",
    "E",
    "L",
    "E",
    "O",
    "N",
    "O",
    "R",
    "A",
    "T",
    "O",
    "M",
    "E",
    "I",
    ".",
    "E",
    "R",
    "E",
    "S",
    "T",
    "U",
    ".",
    "H",
    "A",
    "R",
    "D",
    "L",
    "O",
    "O",
    "K",
    "T",
    "I",
    "E",
    "C",
    "L",
    "I",
    "P",
    "S",
    ".",
    "P",
    "O",
    "P",
    "G",
    "U",
    "N",
    ".",
    "A",
    "A",
    "N",
    "D",
    "E",
    "P",
    "I",
    "C",
    "K",
    "E",
    "D",
    "S",
    ".",
    "M",
    "I",
    "S",
    "L",
    "E",
    "D",
    ".",
    "P",
    "A",
    "Y",
    "E",
    "E",
    "S",
    ".",
    ".",
    ".",
    "S",
    "T",
    "E",
    ".",
    "R",
    "O",
    "S",
    "I",
    "E",
    "R",
    ".",
    "T",
    "I",
    "S",
    ".",
    ".",
    ".",
    ".",
    "A",
    "C",
    "C",
    ".",
    "S",
    "A",
    "L",
    "I",
    "N",
    "E",
    "S",
    ".",
    ".",
    "T",
    "W",
    "O",
    "H",
    "E",
    "A",
    "D",
    "S",
    "L",
    "O",
    "O",
    "S",
    ".",
    "S",
    "L",
    "A",
    "T",
    ".",
    ".",
    "S",
    "W",
    "O",
    "O",
    "N",
    ".",
    "X",
    "M",
    "E",
    "N",
    "L",
    "O",
    "U",
    "T",
    "S",
    ".",
    "O",
    "L",
    "E",
    "O",
    ".",
    "T",
    "E",
    "E",
    "F",
    ".",
    "S",
    "T",
    "A",
    "L",
    "E",
    "A",
    "L",
    "R",
    "E",
    "A",
    "D",
    "Y",
    ".",
    "S",
    "U",
    "P",
    "R",
    "A",
    "S",
    ".",
    "C",
    "A",
    "R",
    "R",
    "I",
    "E",
    ".",
    ".",
    "T",
    "R",
    "I",
    "A",
    "D",
    ".",
    "S",
    "T",
    "E",
    "A",
    "K",
    ".",
    "A",
    "I",
    "L",
    "E",
    "Y",
    ".",
    ".",
    "S",
    "M",
    "E",
    "L",
    "L",
    "Y",
    ".",
    "J",
    "O",
    "I",
    "N",
    "I",
    "N",
    ".",
    "G",
    "R",
    "E",
    "M",
    "L",
    "I",
    "N",
    "O",
    "A",
    "S",
    "I",
    "S",
    ".",
    "F",
    "E",
    "R",
    "N",
    ".",
    "N",
    "E",
    "M",
    "O",
    ".",
    "S",
    "E",
    "L",
    "M",
    "A",
    "C",
    "L",
    "A",
    "N",
    ".",
    "D",
    "L",
    "E",
    "I",
    "F",
    ".",
    ".",
    "S",
    "A",
    "G",
    "E",
    ".",
    "W",
    "I",
    "N",
    "G",
    "K",
    "I",
    "N",
    "G",
    "L",
    "E",
    "A",
    "R",
    ".",
    ".",
    "E",
    "A",
    "S",
    "E",
    "O",
    "N",
    "T",
    ".",
    "S",
    "O",
    "S",
    ".",
    ".",
    ".",
    ".",
    "A",
    "U",
    "K",
    ".",
    "S",
    "P",
    "A",
    "T",
    "E",
    "S",
    ".",
    "O",
    "H",
    "M",
    ".",
    ".",
    ".",
    "S",
    "P",
    "A",
    "W",
    "N",
    "S",
    ".",
    "P",
    "E",
    "A",
    "R",
    "L",
    "S",
    ".",
    "C",
    "L",
    "E",
    "A",
    "N",
    "S",
    "E",
    "P",
    "A",
    "L",
    "E",
    "O",
    ".",
    "M",
    "O",
    "E",
    "S",
    "H",
    "A",
    ".",
    "L",
    "I",
    "A",
    "R",
    "L",
    "I",
    "A",
    "R",
    "O",
    "N",
    "E",
    "F",
    "L",
    "E",
    "S",
    "H",
    ".",
    "H",
    "A",
    "N",
    "S",
    "O",
    "M",
    ".",
    "O",
    "A",
    "S",
    "T",
    "S",
    "S",
    "E",
    "T",
    "T",
    "I",
    "N",
    "G",
    "S",
    ".",
    "A",
    "R",
    "T",
    "U",
    "R",
    "O",
    ".",
    "A",
    "W",
    "A",
    "I",
    "T",
    "E",
    "D",
    "A",
    "S",
    "N",
    "E",
    "R",
    ".",
    ".",
    "S",
    "T",
    "A",
    "N",
    "D",
    "C",
    ".",
    "D",
    "I",
    "N",
    "E",
    ".",
  ],
  "height": 21,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "NY Times, Sun, Feb 03, 2008  JUST FOLLOW DIRECTIONS",
  "width": 21,
}
`;

exports[`test .puz import av110622 1`] = `
Object {
  "clues": Object {
    "AHH": "\\"That feels amazing ...\\"",
    "ANEW": "From the top",
    "APPLE": "iCloud company",
    "ARMHOLE": "Top opening",
    "BAJA": "Peninsula with delicious avocados",
    "BAN": "Pass a law about, maybe",
    "BITPLEASE": "Polite request to an assistant on a home improvement project?",
    "BOS": "NYY rival",
    "CHE": "T-Shirt revolutionary",
    "DECCA": "Patsy Cline's record label",
    "DENALI": "Mount McKinley's national park",
    "DOG": "Precinct animal",
    "EEN": "Day's end, to a poet",
    "ELAINE": "Jerry's fictional ex",
    "ELISA": "Actress Donovan of \\"Clueless\\"",
    "EMMET": "Irish revolutionary Robert",
    "ENEMY": "The FBI, to the mob",
    "EON": "A billion years",
    "EPT": "Brand with blue and pink test results",
    "ESCAPEHAT": "What a fugitive uses to hide his head?",
    "GLUCOSE": "Blood sugar",
    "HELLSKITTEN": "Cute animal fawned over by murderers, whoremongers, idolaters, and liars?",
    "HEX": "Bad spell",
    "HOJOS": "Erstwhile roadside eateries, familiarly",
    "ICET": "\\"Fin\\" Tutuola portrayer on \\"Law & Order: SVU\\"",
    "IHOP": "Chain with sausage links",
    "IRK": "Piss off",
    "ISAN": "\\"This ___ outrage!\\"",
    "ISAW": "\\"___ the best minds of my generation ...\\"",
    "KOTEX": "Big name in pads",
    "LAME": "Palinesque prefix before \\"stream\\"",
    "LAT": "Delt neighbor",
    "LBS": "Mass units: Abbr.",
    "LEIA": "'70s-'80s princess",
    "LIETO": "Deceive",
    "MLKJR": "First president of the SCLC",
    "MLLE": "Srta. in France",
    "MOA": "Minnesota shopping mecca, for short",
    "MUG": "Face",
    "NATIONAL": "Like some holidays",
    "OHS": "Some cereal units",
    "ONCD": "One way to store data",
    "OOLA": "Slave dancer in Jabba the Hutt's palace",
    "ORAL": "Adult subcategory",
    "PIKE": "Seattle's ___ Place Market",
    "PITTINGCOACH": "Mentor to fruit salad chefs?",
    "PLEA": "Result of some court bargaining",
    "PSAS": "Non-commercial TV spots",
    "QBS": "Valuable fantasy football picks, for short",
    "QUIT": "\\"That's really annoying!\\"",
    "RIGGS": "Gibson's \\"Lethal Weapon\\" role",
    "RUNS": "Some charity events",
    "RUSE": "It's a trick",
    "SAGET": "Foul-mouthed comedian Bob",
    "SATAN": "Fallen angel",
    "SIGHSAT": "Shows exasperation with",
    "SKYE": "___ terrier",
    "SONY": "Maker of robots",
    "STETTED": "Let stand, in editing",
    "SWEAT": "Cool off naturally",
    "TARO": "Root in some fake meat",
    "TAY": "One-time YouTube sensation Zonday",
    "TETS": "Cold holidays in Vietnam",
    "THEWICKEDWIT": "Nickname for a demon doing comedy?",
    "THINGAMAJIG": "Whatever-it's-called",
    "TIMEMACHINE": "Conveyance for Marty McFly",
    "TOM": "Batshit Cruise",
    "TRAM": "Theme park transportation",
    "TREKS": "Cannondale alternatives",
    "TRENCHES": "Foxholes",
    "TRINA": "MC with \\"Still da Baddest\\"",
    "TROI": "Commander Deanna on \\"Star Trek: The Next Generation\\"",
    "UAW": "Org. in 2008 negotiations with GM",
    "USSR": "Cold War letters",
    "UTIL": "Monopoly purchase: Abbr.",
    "VEIN": "User's entry point",
    "VINO": "Trattoria beverage",
    "XXO": "Tic-tac-toe loser",
  },
  "grid": Array [
    "S",
    "A",
    "T",
    "A",
    "N",
    ".",
    "T",
    "R",
    "O",
    "I",
    ".",
    "L",
    "A",
    "M",
    "E",
    "T",
    "R",
    "I",
    "N",
    "A",
    ".",
    "R",
    "U",
    "N",
    "S",
    ".",
    "I",
    "H",
    "O",
    "P",
    "E",
    "M",
    "M",
    "E",
    "T",
    ".",
    "E",
    "S",
    "C",
    "A",
    "P",
    "E",
    "H",
    "A",
    "T",
    "T",
    "H",
    "E",
    "W",
    "I",
    "C",
    "K",
    "E",
    "D",
    "W",
    "I",
    "T",
    ".",
    ".",
    ".",
    "T",
    "O",
    "M",
    ".",
    "O",
    "H",
    "S",
    ".",
    ".",
    ".",
    "K",
    "O",
    "T",
    "E",
    "X",
    "E",
    "L",
    "A",
    "I",
    "N",
    "E",
    ".",
    "M",
    "L",
    "L",
    "E",
    ".",
    "H",
    "E",
    "X",
    "D",
    "E",
    "C",
    "C",
    "A",
    ".",
    "P",
    "L",
    "E",
    "A",
    ".",
    "V",
    "I",
    "N",
    "O",
    ".",
    ".",
    "H",
    "E",
    "L",
    "L",
    "S",
    "K",
    "I",
    "T",
    "T",
    "E",
    "N",
    ".",
    ".",
    "Q",
    "U",
    "I",
    "T",
    ".",
    "B",
    "A",
    "J",
    "A",
    ".",
    "R",
    "I",
    "G",
    "G",
    "S",
    "B",
    "A",
    "N",
    ".",
    "U",
    "S",
    "S",
    "R",
    ".",
    "D",
    "E",
    "N",
    "A",
    "L",
    "I",
    "S",
    "W",
    "E",
    "A",
    "T",
    ".",
    ".",
    ".",
    "E",
    "O",
    "N",
    ".",
    "M",
    "U",
    "G",
    ".",
    ".",
    ".",
    "P",
    "I",
    "T",
    "T",
    "I",
    "N",
    "G",
    "C",
    "O",
    "A",
    "C",
    "H",
    "B",
    "I",
    "T",
    "P",
    "L",
    "E",
    "A",
    "S",
    "E",
    ".",
    "H",
    "O",
    "J",
    "O",
    "S",
    "O",
    "R",
    "A",
    "L",
    ".",
    "T",
    "R",
    "A",
    "M",
    ".",
    "E",
    "L",
    "I",
    "S",
    "A",
    "S",
    "K",
    "Y",
    "E",
    ".",
    "S",
    "O",
    "N",
    "Y",
    ".",
    "S",
    "A",
    "G",
    "E",
    "T",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "AV Club xword, 6 22 11",
  "width": 15,
}
`;

exports[`test .puz import cs080904 1`] = `
Object {
  "clues": Object {
    "ACCT": "Money in the bank (abbr.)",
    "ACED": "Passed easily",
    "ACLU": "Censorship-fighting org.",
    "AGED": "___ to perfection",
    "AIDE": "Office assistant",
    "ALDER": "Birch kin",
    "ALE": "Bath suds?",
    "AMEBA": "Microscope slide creature",
    "AMEN": "Cry from the pews",
    "AMESS": "\\"Don't make ___\\" (Mom's admonition)",
    "AMOCO": "British Petroleum acquisition of 1998",
    "AMPERES": "Electrical units",
    "ANKARA": "Capital due north of Cyprus",
    "APSE": "Semicircular church section",
    "ASIDE": "Tangential observation",
    "AVOW": "Affirm as true",
    "BANK": "The buck stops here",
    "BEDIM": "Make shadowy",
    "BODE": "Signify",
    "CANDO": "Enthusiastic, as an attitude",
    "CARPEDIEM": "Philosophy for doers",
    "CATTY": "Slyly malicious",
    "CIT": "Op. ___ (footnote abbr.)",
    "CLOGDANCER": "Lively rhythmic entertainer",
    "CORNDOG": "Frank on a stick",
    "COSMICDUST": "Nebula composition",
    "CRASHDIVE": "Submarine's evasive maneuver",
    "CREPES": "Blini cousins",
    "CULP": "\\"PT 109\\" actor Robert",
    "CUR": "Four-footed lowlife",
    "CYRANO": "Rostand's long-nosed lover",
    "DADDYO": "Title used by hepcats",
    "DELE": "Stet's opposite",
    "DEMS": "2008 Denver conventioneers, informally",
    "ELI": "Samuel's teacher",
    "ERIE": "Northernmost Pennsylvania county",
    "EVIL": "Satan's doing",
    "EWER": "Ornamental pitcher",
    "FARES": "Orbitz.com info",
    "FORMAL": "Starchy",
    "FRETS": "Bars on necks",
    "HDTV": "Den luxury, briefly",
    "HERE": "\\"Present\\"",
    "IBM": "Co. known as \\"Big Blue\\"",
    "ICK": "\\"Bleah!\\"",
    "IDES": "Mid-month day",
    "IDLE": "Unfounded, as gossip",
    "ITASCA": "Source of the Mississippi",
    "KETCH": "Two-masted vessel",
    "LADE": "Fill with cargo",
    "LIED": "Was inventive, and then some",
    "LII": "Nero's 52",
    "LLAMA": "Andean wool source",
    "LOOK": "\\"Check this out!\\"",
    "LOVE": "Torch song topic",
    "LYES": "Soapmaking solutions",
    "MARE": "Mule's mother",
    "MEDDLER": "Yenta",
    "MEIN": "\\"Don't Fence ___\\"",
    "NEAL": "Patricia of \\"The Fountainhead\\"",
    "NOM": "René, par exemple",
    "NRA": "Gp. on the range?",
    "ONCUE": "As expected",
    "ONEOFF": "Happening only a single time",
    "OPUS": "Numbered musical work",
    "OSMOND": "Donny or Marie",
    "OSS": "C.I.A. predecessor",
    "PESKY": "Annoying",
    "PRIM": "Prissy",
    "RAILAT": "Chew out",
    "REBAG": "Switch from plastic to paper?",
    "ROUTE": "Mail carrier's beat",
    "SERIF": "Calligraphy line",
    "TACIT": "Unspoken, as an approval",
    "TAPIR": "Nocturnal ungulate with a long snout",
    "TOYCAR": "Matchbox item",
    "UPSET": "Win unexpectedly",
    "VOCAL": "Apt to opine",
  },
  "grid": Array [
    "T",
    "A",
    "P",
    "I",
    "R",
    ".",
    "L",
    "O",
    "O",
    "K",
    ".",
    "A",
    "C",
    "E",
    "D",
    "A",
    "M",
    "E",
    "B",
    "A",
    ".",
    "A",
    "P",
    "S",
    "E",
    ".",
    "M",
    "A",
    "R",
    "E",
    "C",
    "O",
    "S",
    "M",
    "I",
    "C",
    "D",
    "U",
    "S",
    "T",
    ".",
    "P",
    "R",
    "I",
    "M",
    "I",
    "C",
    "K",
    ".",
    "L",
    "Y",
    "E",
    "S",
    ".",
    "C",
    "R",
    "E",
    "P",
    "E",
    "S",
    "T",
    "O",
    "Y",
    "C",
    "A",
    "R",
    ".",
    ".",
    ".",
    "H",
    "E",
    "R",
    "E",
    ".",
    ".",
    ".",
    ".",
    ".",
    "I",
    "T",
    "A",
    "S",
    "C",
    "A",
    ".",
    "B",
    "E",
    "D",
    "I",
    "M",
    "A",
    "C",
    "C",
    "T",
    ".",
    "N",
    "E",
    "A",
    "L",
    ".",
    "A",
    "S",
    "I",
    "D",
    "E",
    "C",
    "U",
    "R",
    ".",
    "C",
    "O",
    "R",
    "N",
    "D",
    "O",
    "G",
    ".",
    "E",
    "L",
    "I",
    "L",
    "L",
    "A",
    "M",
    "A",
    ".",
    "I",
    "D",
    "E",
    "S",
    ".",
    "A",
    "M",
    "E",
    "N",
    "U",
    "P",
    "S",
    "E",
    "T",
    ".",
    "F",
    "O",
    "R",
    "M",
    "A",
    "L",
    ".",
    ".",
    ".",
    ".",
    ".",
    "H",
    "D",
    "T",
    "V",
    ".",
    ".",
    ".",
    "O",
    "N",
    "E",
    "O",
    "F",
    "F",
    "D",
    "A",
    "D",
    "D",
    "Y",
    "O",
    ".",
    "B",
    "A",
    "N",
    "K",
    ".",
    "N",
    "R",
    "A",
    "E",
    "V",
    "I",
    "L",
    ".",
    "C",
    "L",
    "O",
    "G",
    "D",
    "A",
    "N",
    "C",
    "E",
    "R",
    "L",
    "O",
    "V",
    "E",
    ".",
    "A",
    "I",
    "D",
    "E",
    ".",
    "R",
    "O",
    "U",
    "T",
    "E",
    "E",
    "W",
    "E",
    "R",
    ".",
    "L",
    "I",
    "E",
    "D",
    ".",
    "A",
    "M",
    "E",
    "S",
    "S",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "September 4, 2008 - \\"CD Collection\\"",
  "width": 15,
}
`;

exports[`test .puz import nyt_partlyfilled 1`] = `
Object {
  "clues": Object {
    "AESOP": "Fable writer",
    "ALE": "Schooner fill",
    "ALONE": "Unaccompanied",
    "AREA": "Geometry calculation",
    "ASH": "___ Wednesday",
    "ATOP": "Perched on",
    "BOT": "Droid",
    "CIRC": "No. on which a magazine's ad rates are based",
    "CITY": "The \\"C\\" in N.Y.C.",
    "COD": "Fish after which a cape is named",
    "COMIC": "\\"Luann\\" or \\"Blondie\\"",
    "COO": "Pigeon's sound",
    "DIO": "God, in Italy",
    "EARL": "___ of Sandwich",
    "ECHO": "Repeat",
    "ECOLE": "French place of learning",
    "EEG": "Brain scan, for short",
    "EIN": "Freudian one",
    "EPEE": "Dueling sword",
    "EPI": "Prefix with center",
    "EPOCH": "Geologic time unit",
    "ETE": "French summer",
    "EXPOS": "Bygone Montreal ball club",
    "FESS": "Admit (to), with \\"up\\"",
    "FLAG": "Stars and Stripes, e.g.",
    "FOCI": "Places where lines meet",
    "FRO": "Black power hairdo, for short",
    "GLADTO": "\\"My pleasure\\"",
    "GLIB": "Talking maybe a little too fast",
    "GOTON": "Mounted, as a horse",
    "INHALF": "Divided 50/50",
    "IOTA": "Itsy-bitsy bit",
    "ISLE": "___ of Wight",
    "ISLIP": "Long Island airfield town",
    "KEENS": "Wails",
    "LAPP": "Reindeer herder",
    "LEO": "Sign before Virgo",
    "LEX": "Big Apple ave.",
    "LOCH": "___ Ness monster",
    "LOUIE": "Nephew of Donald Duck",
    "LOVELETTER": "Billet-doux",
    "NONE": "___ too soon",
    "OAF": "Dunderpate",
    "OBEDIENCESCHOOL": "Command center? ... or where you might hear the starts of 17-, 28- and 49-Across",
    "OCTO": "Numerical prefix with -ber",
    "ORCA": "Killer whale",
    "OTIS": "Big elevator manufacturer",
    "OTTO": "Sgt. Snorkel's dog",
    "PARTIES": "Republican, Democratic, Green, etc.",
    "PHOTO": "Snapshot",
    "PLOW": "Winter truck attachment",
    "POBOX": "Mail receiver, in brief",
    "RAIN": "Cause of a game cancellation",
    "RAMP": "Interstate entrance or exit",
    "ROW": "Column's counterpart",
    "SADSONG": "Dirge",
    "SAGA": "\\"Roots,\\" for one",
    "SALUT": "French greeting",
    "SEA": "Bounding main",
    "SHAH": "Deposed Iranian",
    "SITONTHEFENCE": "Be undecided",
    "SOAP": "Suds maker",
    "SPADE": "Black card",
    "SPEAKOFTHEDEVIL": "\\"Here he is now!\\"",
    "STAYTHECOURSE": "Persist to completion",
    "TEAS": "Twinings selections",
    "TELEX": "Old message system",
    "THAW": "Remove from the freezer",
    "THEE": "For whom the bell tolls, in a John Donne poem",
    "THISSIDEUP": "Message on a shipping crate",
    "TIER": "Wedding cake feature",
    "TREE": "Logic diagram",
    "TWENTY": "A score",
    "UNITE": "Join",
    "UPSHOT": "End result",
    "YAPS": "Talks one's head off",
    "YOGA": "Quiet exercise",
    "YORE": "Knight time?",
  },
  "grid": Array [
    "F",
    "L",
    "A",
    "G",
    ".",
    "F",
    "O",
    "C",
    "I",
    ".",
    "S",
    "A",
    "L",
    "U",
    "T",
    "E",
    "A",
    "R",
    "L",
    ".",
    "R",
    "A",
    "I",
    "N",
    ".",
    "A",
    "L",
    "O",
    "N",
    "E",
    "S",
    "P",
    "E",
    "A",
    "K",
    "O",
    "F",
    "T",
    "H",
    "E",
    "D",
    "E",
    "V",
    "I",
    "L",
    "S",
    "P",
    "A",
    "D",
    "E",
    ".",
    ".",
    "Y",
    "A",
    "P",
    "S",
    ".",
    "E",
    "T",
    "E",
    ".",
    ".",
    ".",
    "T",
    "E",
    "A",
    "S",
    ".",
    "L",
    "E",
    "O",
    ".",
    "L",
    "E",
    "X",
    "S",
    "I",
    "T",
    "O",
    "N",
    "T",
    "H",
    "E",
    "F",
    "E",
    "N",
    "C",
    "E",
    ".",
    ".",
    "A",
    "S",
    "H",
    ".",
    "S",
    "O",
    "A",
    "P",
    ".",
    ".",
    "G",
    "O",
    "T",
    "O",
    "N",
    "G",
    "L",
    "I",
    "B",
    ".",
    "P",
    "H",
    "O",
    "T",
    "O",
    ".",
    "O",
    "T",
    "T",
    "O",
    "A",
    "E",
    "S",
    "O",
    "P",
    ".",
    ".",
    "C",
    "I",
    "R",
    "C",
    ".",
    "E",
    "I",
    "N",
    ".",
    ".",
    "S",
    "T",
    "A",
    "Y",
    "T",
    "H",
    "E",
    "C",
    "O",
    "U",
    "R",
    "S",
    "E",
    "E",
    "P",
    "I",
    ".",
    "R",
    "O",
    "W",
    ".",
    "R",
    "A",
    "M",
    "P",
    ".",
    ".",
    ".",
    "C",
    "O",
    "D",
    ".",
    "T",
    "R",
    "E",
    "E",
    ".",
    ".",
    "I",
    "S",
    "L",
    "I",
    "P",
    "O",
    "B",
    "E",
    "D",
    "I",
    "E",
    "N",
    "C",
    "E",
    "S",
    "C",
    "H",
    "O",
    "O",
    "L",
    "L",
    "O",
    "U",
    "I",
    "E",
    ".",
    "T",
    "H",
    "E",
    "E",
    ".",
    "O",
    "C",
    "T",
    "O",
    "E",
    "X",
    "P",
    "O",
    "S",
    ".",
    "Y",
    "O",
    "G",
    "A",
    ".",
    "T",
    "H",
    "A",
    "W",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "NY Times, Mon, Mar 10, 2008",
  "width": 15,
}
`;

exports[`test .puz import nyt_rebus_with_notes_and_shape 1`] = `
Object {
  "clues": Object {
    "ABATE": "Peter out",
    "ABDOMINAL": "Like some six-packs",
    "ADEN": "Port near the Red Sea",
    "ADUE": "Together, in music",
    "AGATE": "Striped quartz",
    "ALDA": "Tony nominee for \\"Glengarry Glen Ross\\"",
    "ANAIS": "First name in erotica",
    "ANDSO": "\\"Thus ...\\"",
    "ANET": "Without ___ (riskily)",
    "ANIL": "Dye plant",
    "ANTS": "Hill dwellers",
    "ASTARTE": "Ancient Semitic fertility goddess",
    "ATEST": "Mushroom maker, for short",
    "ATTHE": "___ ready",
    "AYN": "Rand who created Dagny Taggart",
    "BOULEVARD": "See 32-Down",
    "CCS": "Also sends to, as an e-mail",
    "CHEF": "Child, for one",
    "COLA": "___ + grenadine + maraschino cherry = Roy Rogers cocktail",
    "DOLE": "Apportionment",
    "EARS": "All ___",
    "EBON": "Like some keys",
    "EDUCT": "Extracted chemical",
    "EDYS": "Competitor of Ben & Jerry's",
    "ELAINEMAY": "\\"Ishtar\\" director",
    "ERICH": "Filmmaker Von Stroheim",
    "ESA": "That, to Tomás",
    "ESTEE": "Popular women's fragrance",
    "ETHAN": "Allen in American history",
    "ETHOS": "Set of values",
    "ETTA": "James of jazz",
    "FAM": "Relatives, slangily",
    "GLARE": "Ruiner of many a photo",
    "GREW": "Waxed",
    "HOAR": "Frost",
    "HOLLYWOOD": "With 12-Down, locale of the 4-Down",
    "ICER": "Bakery employee",
    "IRENE": "Adler who outwitted Sherlock Holmes",
    "ITSO": "\\"Wishing won't make ___\\"",
    "LABS": "They might be chocolate",
    "LARA": "___ Flynn Boyle of \\"Twin Peaks\\"",
    "LASH": "Punishment unit",
    "LEAD": "Detective's need",
    "LIE": "Interrogator's discovery",
    "LIV": "Actress Tyler",
    "LOSANGELES": "City where 32- and 12-Down is found",
    "LOSTARTS": "Illumination of manuscripts, and others",
    "MER": "View from Marseille",
    "MILAN": "Home of \\"The Last Supper\\"",
    "MUSTARD": "Yellow squirt?",
    "NEA": "Cultural org.",
    "NOSE": "It may be wrinkled",
    "NOSTARCH": "Request at a laundry",
    "NSA": "Ultrasecret org.",
    "ONAN": "___ impulse",
    "OWN": "Retain",
    "PCTS": "Pie chart figs.",
    "PESTO": "___ alla genovese (sauce)",
    "RACKETEERS": "Makes people offers they can't refuse?",
    "RANAT": "Charged",
    "RAP": "You might end up with a bum one",
    "RESTAREA": "Place for picnicking and dog-walking",
    "RESTARTS": "Options during computer woes",
    "ROTE": "You might give a speech by this",
    "SARS": "Headline-making illness of 2002-03",
    "SEEN": "Spotted",
    "SHES": "Elvis Presley's \\"___ Not You\\"",
    "SLAM": "Dis",
    "SNEER": "Vile smile",
    "TASTE": "It's often unaccounted for",
    "TOMA": "Tony Musante TV series",
    "TWEE": "___ pop, music genre since the 1980s",
    "VAMPIREBAT": "Nocturnal bloodsucker",
    "VERA": "Lynn who sang \\"We'll Meet Again\\"",
    "WALKOFFAME": "Theme of this puzzle",
    "WAR": "\\"That mad game the world so loves to play,\\" to Jonathan Swift",
  },
  "grid": Array [
    "G",
    "R",
    "E",
    "W",
    ".",
    "A",
    "N",
    "A",
    "I",
    "S",
    ".",
    "L",
    "A",
    "B",
    "S",
    "L",
    "A",
    "R",
    "A",
    ".",
    "N",
    "O",
    "STAR",
    "C",
    "H",
    ".",
    "E",
    "B",
    "O",
    "N",
    "A",
    "N",
    "I",
    "L",
    ".",
    "E",
    "S",
    "T",
    "E",
    "E",
    ".",
    "A",
    "D",
    "U",
    "E",
    "R",
    "A",
    "C",
    "K",
    "E",
    "T",
    "E",
    "E",
    "R",
    "S",
    ".",
    "D",
    "O",
    "L",
    "E",
    "E",
    "T",
    "H",
    "O",
    "S",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    "M",
    "E",
    "R",
    ".",
    ".",
    ".",
    "F",
    "A",
    "M",
    ".",
    "R",
    "A",
    "P",
    ".",
    "L",
    "I",
    "V",
    ".",
    "C",
    "H",
    "E",
    "F",
    ".",
    "I",
    "R",
    "E",
    "N",
    "E",
    ".",
    "O",
    "N",
    "A",
    "N",
    "C",
    "O",
    "L",
    "A",
    ".",
    "L",
    "O",
    "STAR",
    "T",
    "S",
    ".",
    "S",
    "A",
    "R",
    "S",
    "S",
    "L",
    "A",
    "M",
    ".",
    "A",
    "T",
    "E",
    "S",
    "T",
    ".",
    "A",
    "L",
    "D",
    "A",
    ".",
    "L",
    "I",
    "E",
    ".",
    "N",
    "E",
    "A",
    ".",
    "O",
    "W",
    "N",
    ".",
    ".",
    ".",
    "A",
    "Y",
    "N",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    "A",
    "G",
    "A",
    "T",
    "E",
    "T",
    "W",
    "E",
    "E",
    ".",
    "V",
    "A",
    "M",
    "P",
    "I",
    "R",
    "E",
    "B",
    "A",
    "T",
    "T",
    "O",
    "M",
    "A",
    ".",
    "E",
    "D",
    "U",
    "C",
    "T",
    ".",
    "L",
    "A",
    "S",
    "H",
    "H",
    "O",
    "A",
    "R",
    ".",
    "R",
    "E",
    "STAR",
    "T",
    "S",
    ".",
    "E",
    "T",
    "T",
    "A",
    "E",
    "D",
    "Y",
    "S",
    ".",
    "A",
    "N",
    "D",
    "S",
    "O",
    ".",
    "S",
    "E",
    "E",
    "N",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [
    7,
    47,
    56,
    168,
    177,
  ],
  "title": "NY Times, Thu, Sep 11, 2008  When this puzzle is done, connect the circled letters in alphabetical order, and then back to the start, to reveal something seen on the 32-Down 4-Down.",
  "width": 15,
}
`;

exports[`test .puz import nyt_with_shape 1`] = `
Object {
  "clues": Object {
    "ACCEPT": "Honor",
    "ACU": "Prefix with pressure",
    "ALONE": "Single-handedly",
    "ALTON": "Illinois city, site of the last Lincoln-Douglas debate",
    "AND": "Moreover",
    "ARAIL": "Thin as ___",
    "ARETOO": "Playground retort",
    "ASSIST": "Basketball datum",
    "ATESTS": "Events registered by seismometers, in brief",
    "ATMFEE": "Charge for cash",
    "AWN": "Natural bristle",
    "BEGGAR": "One desiring change",
    "BERG": "Mad magazine cartoonist Dave",
    "BLING": "Gaudy jewelry, in slang",
    "BOXER": "Ring figure",
    "BRAVA": "La Scala cheer",
    "BRR": "\\"It's c-c-c-cold!\\"",
    "BTEAM": "Second string",
    "CHINESEMUSTARD": "Egg roll topping, perhaps",
    "COE": "Iowa college",
    "DAHLIA": "National flower of Mexico",
    "DAME": "Broad",
    "DEFACE": "Give bad marks",
    "DEIMOS": "Moon of Mars",
    "DID": "Impersonated",
    "DOLLOP": "Spoonful, say",
    "DOONE": "Blackmore's Lorna",
    "DUANEEDDY": "\\"Forty Miles of Bad Road\\" guitarist",
    "DUEL": "Climactic scene in \\"Hamlet\\"",
    "EDICT": "___ of Nantes, 1598",
    "ELM": "___ beetle",
    "ENTIRE": "Unabridged",
    "EON": "Untold millennia",
    "EPEE": "Parrying weapon",
    "ERODED": "Like shorelines, often",
    "ETATS": "Italie et Allemagne",
    "GAEL": "Celtic speaker",
    "GELS": "Some deodorants",
    "GLOOM": "Depression",
    "GUYFAWKESNIGHT": "November 5, in Britain",
    "HAIFA": "Port near Nazareth",
    "HAST": "\\"And ___ thou slain the Jabberwock?\\": Carroll",
    "HTS": "Abbr. after Cleveland or Brooklyn",
    "ICY": "Standoffish",
    "IDA": "Sun Valley locale: Abbr.",
    "INKIND": "Equitable way to return a favor",
    "INTEL": "Purveyor of chips",
    "ISOLA": "Capri, e.g., to a Capriote",
    "ITE": "Resident: Suffix",
    "ITHE": "Spillane's \\"___ Jury\\"",
    "JAPES": "Mocks",
    "JUST": "Fair",
    "KIM": "Kipling novel",
    "LAMBDA": "Leader of Lesbos?",
    "LAS": "Part of U.N.L.V.",
    "LAURA": "\\"La Gioconda\\" mezzo-soprano",
    "LGS": "Some offensive linemen: Abbr.",
    "LIMAOHIO": "City 70 miles SSW of Toledo",
    "MACRO": "Prefix with economics",
    "MAXI": "Start of something big?",
    "MDI": "Year that Michelangelo began work on \\"David\\"",
    "MIR": "Humans last lived there in 2000",
    "MNOP": "Alphabet quartet",
    "MOB": "Treat like a hero, maybe",
    "NARY": "Quaint \\"not\\"",
    "NEAR": "Within striking distance",
    "NEE": "Once known as",
    "NET": "Invoice amount",
    "NONET": "Large chamber group",
    "NOUSE": "\\"Don't even bother\\"",
    "OBOLS": "Ancient Greek coins",
    "OBTAIN": "Procure",
    "OBVERT": "Flip over",
    "OMEN": "Shooting star, maybe",
    "OMNI": "Magazine founded by Bob Guccione",
    "ONSITE": "Not remote",
    "OPERE": "___ citato",
    "OSCARS": "Annual Sunday event, with \\"the\\"",
    "OSTEND": "Belgian city with an 1854 manifesto",
    "OTTOS": "Four Holy Roman emperors",
    "OTWAY": "\\"Venice Preserved\\" dramatist Thomas",
    "OVEN": "Pizza place",
    "OYER": "Open court hearing",
    "PASHA": "\\"Doctor Zhivago\\" role",
    "PATHOS": "Feeling evoked in drama",
    "PAW": "Kitten \\"mitten\\"",
    "PLOW": "Pickup attachment",
    "PRET": "___-à-porter",
    "PREZ": "Bossman or bosswoman",
    "PROFESSIONALWRESTLING": "It's quite different from the high-school variety",
    "PROMISING": "Favorable",
    "PRUDES": "Unlikely attenders of R-rated films",
    "PUBLISHINGCOMPANY": "Viking, for one",
    "QUARTERMASTERGENERAL": "Army supply officer",
    "RATIO": "Batting average, e.g.",
    "RAWDEAL": "Injustice",
    "REEDED": "Thatched",
    "RELO": "Move, to a real-estate broker",
    "REN": "TV pooch",
    "REPENT": "Feel remorse for",
    "RIPE": "Stinky, as gym clothes",
    "RIVET": "Transfix",
    "ROCKYMOUNTAINBIGHORN": "Wild sheep of the western United States",
    "ROSEOIL": "Perfume ingredient",
    "RYE": "Manhattan part",
    "SAFER": "Deserving a lower insurance premium",
    "SAG": "Lose strength",
    "SAIDSO": "Demanded without reason",
    "SAILS": "Breezes (through)",
    "SENSOR": "Security system component",
    "SHOPS": "Bazaar units",
    "SID": "Half brother of Tom Sawyer",
    "SIRANTHONYHOPKINS": "Best Actor of 1991",
    "SKIRR": "Go rapidly",
    "SMEWS": "Eurasian ducks",
    "SNEES": "Bygone blades",
    "SOONYI": "Mrs. Woody Allen",
    "SPARKS": "Signs of a bad outlet",
    "SPOOR": "Trail to follow",
    "SQUIRT": "Pipsqueak",
    "STERNS": "Rudder locations",
    "STYRENE": "Foamcore component",
    "SUMOS": "\\"Super Duper ___\\" (anime series)",
    "TOETOTOE": "In direct opposition",
    "TREATY": "It may be bilateral",
    "TSETSES": "Flies over the Equator",
    "TURNER": "Word with page or wood",
    "TUSH": "Caboose",
    "ULAN": "___ Bator",
    "UPS": "FedEx rival",
    "URN": "Spigoted vessel",
    "UTE": "Salt Lake City player",
    "YANKEE": "___ Stadium, opened in 1923",
    "ZEN": "___ state",
  },
  "grid": Array [
    "S",
    "A",
    "I",
    "D",
    "S",
    "O",
    ".",
    ".",
    "L",
    "A",
    "M",
    "B",
    "D",
    "A",
    ".",
    "P",
    "R",
    "U",
    "D",
    "E",
    "S",
    "A",
    "C",
    "C",
    "E",
    "P",
    "T",
    ".",
    "R",
    "A",
    "W",
    "D",
    "E",
    "A",
    "L",
    ".",
    "R",
    "E",
    "P",
    "E",
    "N",
    "T",
    "G",
    "U",
    "Y",
    "F",
    "A",
    "W",
    "K",
    "E",
    "S",
    "N",
    "I",
    "G",
    "H",
    "T",
    ".",
    "O",
    "N",
    "S",
    "I",
    "T",
    "E",
    ".",
    ".",
    ".",
    "A",
    "R",
    "A",
    "I",
    "L",
    ".",
    ".",
    ".",
    "G",
    "L",
    "O",
    "O",
    "M",
    ".",
    ".",
    "M",
    "I",
    "R",
    ".",
    "R",
    "O",
    "C",
    "K",
    "Y",
    "M",
    "O",
    "U",
    "N",
    "T",
    "A",
    "I",
    "N",
    "B",
    "I",
    "G",
    "H",
    "O",
    "R",
    "N",
    "J",
    "A",
    "P",
    "E",
    "S",
    ".",
    ".",
    ".",
    "L",
    "A",
    "U",
    "R",
    "A",
    ".",
    "T",
    "S",
    "E",
    "T",
    "S",
    "E",
    "S",
    "U",
    "T",
    "E",
    ".",
    ".",
    "O",
    "S",
    "C",
    "A",
    "R",
    "S",
    ".",
    ".",
    "S",
    "A",
    "I",
    "L",
    "S",
    ".",
    ".",
    ".",
    "S",
    "I",
    "R",
    "A",
    "N",
    "T",
    "H",
    "O",
    "N",
    "Y",
    "H",
    "O",
    "P",
    "K",
    "I",
    "N",
    "S",
    ".",
    "M",
    "O",
    "B",
    "T",
    "O",
    "E",
    "T",
    "O",
    "T",
    "O",
    "E",
    ".",
    ".",
    ".",
    "B",
    "L",
    "I",
    "N",
    "G",
    ".",
    "D",
    "A",
    "M",
    "E",
    ".",
    ".",
    ".",
    "M",
    "N",
    "O",
    "P",
    ".",
    ".",
    "S",
    "P",
    "O",
    "O",
    "R",
    ".",
    ".",
    "B",
    "O",
    "X",
    "E",
    "R",
    "P",
    "R",
    "O",
    "F",
    "E",
    "S",
    "S",
    "I",
    "O",
    "N",
    "A",
    "L",
    "W",
    "R",
    "E",
    "S",
    "T",
    "L",
    "I",
    "N",
    "G",
    "R",
    "I",
    "V",
    "E",
    "T",
    ".",
    ".",
    "S",
    "M",
    "E",
    "W",
    "S",
    ".",
    ".",
    "D",
    "U",
    "E",
    "L",
    ".",
    ".",
    ".",
    "E",
    "P",
    "E",
    "E",
    ".",
    "D",
    "O",
    "O",
    "N",
    "E",
    ".",
    ".",
    ".",
    "L",
    "I",
    "M",
    "A",
    "O",
    "H",
    "I",
    "O",
    "Z",
    "E",
    "N",
    ".",
    "P",
    "U",
    "B",
    "L",
    "I",
    "S",
    "H",
    "I",
    "N",
    "G",
    "C",
    "O",
    "M",
    "P",
    "A",
    "N",
    "Y",
    ".",
    ".",
    ".",
    "B",
    "R",
    "A",
    "V",
    "A",
    ".",
    ".",
    "A",
    "T",
    "E",
    "S",
    "T",
    "S",
    ".",
    ".",
    "I",
    "T",
    "E",
    "S",
    "T",
    "Y",
    "R",
    "E",
    "N",
    "E",
    ".",
    "P",
    "A",
    "S",
    "H",
    "A",
    ".",
    ".",
    ".",
    "S",
    "A",
    "F",
    "E",
    "R",
    "Q",
    "U",
    "A",
    "R",
    "T",
    "E",
    "R",
    "M",
    "A",
    "S",
    "T",
    "E",
    "R",
    "G",
    "E",
    "N",
    "E",
    "R",
    "A",
    "L",
    ".",
    "U",
    "R",
    "N",
    ".",
    ".",
    "E",
    "T",
    "A",
    "T",
    "S",
    ".",
    ".",
    ".",
    "A",
    "L",
    "O",
    "N",
    "E",
    ".",
    ".",
    ".",
    "I",
    "N",
    "K",
    "I",
    "N",
    "D",
    ".",
    "C",
    "H",
    "I",
    "N",
    "E",
    "S",
    "E",
    "M",
    "U",
    "S",
    "T",
    "A",
    "R",
    "D",
    "R",
    "E",
    "E",
    "D",
    "E",
    "D",
    ".",
    "R",
    "O",
    "S",
    "E",
    "O",
    "I",
    "L",
    ".",
    "S",
    "O",
    "O",
    "N",
    "Y",
    "I",
    "T",
    "R",
    "E",
    "A",
    "T",
    "Y",
    ".",
    "O",
    "S",
    "T",
    "E",
    "N",
    "D",
    ".",
    ".",
    "E",
    "R",
    "O",
    "D",
    "E",
    "D",
  ],
  "height": 21,
  "highlight": "circle",
  "highlighted": Array [
    48,
    51,
    52,
    53,
    54,
    55,
    88,
    96,
    97,
    100,
    149,
    154,
    158,
    160,
    210,
    220,
    222,
    229,
    279,
    281,
    282,
    283,
    288,
    290,
    336,
    337,
    341,
    347,
    351,
    385,
    386,
    389,
    390,
    394,
  ],
  "title": "NY Times, Sun, Jul 20, 2008  ACROSS THE BOARD",
  "width": 21,
}
`;

exports[`test .puz import puz_131202banks 1`] = `
Object {
  "clues": Object {
    "ACRE": "God's Little ___",
    "AGE": "Cate Blanchett stars in Elizabeth: The Golden ___",
    "AINT": "\\"___ Misbehavin'\\"",
    "AIR": "15 Across had a recurring role on The Fresh Prince of Bel-___",
    "ALL": "John Legend's \\"___ of Me\\"",
    "AMA": "\\"I ___ Rock\\" by Simon & Garfunkel",
    "ANA": "Actress ___ Ortiz",
    "ARI": "Actress Graynor",
    "ARTS": "Pepper and Tatum of jazz",
    "ASAS": "Butterfield and Hutchinson",
    "ASH": "Cosmetician Mary Kay",
    "ASKED": "Celine Deon's \\"If You ___ Me To\\"",
    "ATALE": "___ of Two Cities (2 wds.)",
    "AWRY": "Cockeyed",
    "AYN": "Author ___ Rand",
    "DDE": "HST's successor",
    "DEE": "Jazz singer ___ Dee Bridgewater",
    "DLI": "Nero's 551",
    "DNA": "Genetic material, for short",
    "ELF": "Yuletide comedy",
    "ELI": "Footballer Manning",
    "ELM": "Freddy Krueger's favorite street",
    "ESTATE": "The Fifth ___",
    "EVA": "Actress Green of Dark Shadows",
    "EVE": "All About ___",
    "FEW": "A ___ Good Men",
    "HEL": "Norse goddess of the underworld",
    "HESSE": "German author Hermann ___",
    "INN": "Motel of yore",
    "INUSE": "Being operated (2 wds.)",
    "ITUP": "15 Across was on Shake ___! twice (2 wds.)",
    "JADA": "___ Pinkett Smith",
    "JANELYNCH": "A star of Glee",
    "JUMPAT": "Accept quickly and eagerly (2 wds.)",
    "LED": "___ Zeppelin",
    "LEE": "Halloween: Resurrection with Jamie ___ Curtis and 15 Across",
    "LEO": "MGM lion",
    "LIE": "The Rolling Stones' \\"Don't ___ to Me\\"",
    "LIT": "Illuminated",
    "LIV": "Disney Channel's ___ and Maddie",
    "LOU": "Dobbs or Ferrigno",
    "LOVE": "___ Stinks stars 15 Across",
    "MAIA": "Mother of Hermes",
    "MAJOR": "Mary McDonnell stars in ___ Crimes",
    "MAO": "___ Tse-tung",
    "MAYA": "Angelou or Rudolph",
    "MEIN": "\\"Don't Fence ___\\" (2 wds.)",
    "MODEL": "15 Across emcees America's Next Top ___",
    "NIN": "Diarist Anas ___",
    "OLD": "___ Dogs with John Travolta",
    "OLIVE": "___ Oyl (Popeye's lady)",
    "ORE": "Ty Burrell's home state (abbr.)",
    "ORNE": "Novelist Sarah ___ Jewett",
    "PUP": "Pluto, when young",
    "RAW": "___ Deal (Schwarzenegger film)",
    "RENEE": "Fleming or Zellweger",
    "RIO": "Blame It on ___",
    "RUN": "Midnight ___",
    "SARAH": "___ Michelle Gellar",
    "SAYS": "Bon Jovi's \\"Who ___ You Can't Go Home\\"",
    "SHEB": "Actor ___ Wooley",
    "SIB": "Their brother David, to Patricia and Rosanna Arquette, e.g.",
    "SNOW": "___ White and the Huntsman",
    "TEL": "___ Aviv",
    "TYRABANKS": "Supermodel and TV host (2 wds.)",
    "UGLY": "Coyote ___ features 15 Across",
    "UMA": "Actress Thurman",
    "VIN": "Riddick star Diesel",
    "WAY": "Steve Carell stars in The ___ Way Back",
    "WEB": "___ Therapy with Lisa Kudrow",
  },
  "grid": Array [
    "A",
    "M",
    "A",
    ".",
    "S",
    "A",
    "R",
    "A",
    "H",
    ".",
    "M",
    "A",
    "O",
    "R",
    "A",
    "W",
    ".",
    "I",
    "N",
    "U",
    "S",
    "E",
    ".",
    "A",
    "I",
    "R",
    "T",
    "Y",
    "R",
    "A",
    "B",
    "A",
    "N",
    "K",
    "S",
    ".",
    "I",
    "N",
    "N",
    "S",
    "A",
    "Y",
    "S",
    ".",
    ".",
    ".",
    "E",
    "S",
    "T",
    "A",
    "T",
    "E",
    ".",
    ".",
    ".",
    "H",
    "E",
    "L",
    ".",
    "D",
    "E",
    "E",
    ".",
    ".",
    ".",
    "A",
    "L",
    "L",
    ".",
    "L",
    "E",
    "D",
    ".",
    ".",
    "L",
    "O",
    "V",
    "E",
    "R",
    "I",
    "O",
    ".",
    "M",
    "O",
    "D",
    "E",
    "L",
    ".",
    "L",
    "I",
    "V",
    "I",
    "T",
    "U",
    "P",
    ".",
    ".",
    "E",
    "L",
    "I",
    ".",
    "D",
    "N",
    "A",
    ".",
    ".",
    ".",
    "U",
    "M",
    "A",
    ".",
    "F",
    "E",
    "W",
    ".",
    ".",
    ".",
    "J",
    "U",
    "M",
    "P",
    "A",
    "T",
    ".",
    ".",
    ".",
    "A",
    "S",
    "A",
    "S",
    "A",
    "G",
    "E",
    ".",
    "J",
    "A",
    "N",
    "E",
    "L",
    "Y",
    "N",
    "C",
    "H",
    "D",
    "L",
    "I",
    ".",
    "O",
    "L",
    "I",
    "V",
    "E",
    ".",
    "O",
    "R",
    "E",
    "A",
    "Y",
    "N",
    ".",
    "R",
    "E",
    "N",
    "E",
    "E",
    ".",
    "W",
    "E",
    "B",
  ],
  "height": 13,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "Fierce & Fabulous",
  "width": 13,
}
`;

exports[`test .puz import version-1.2-puzzle 1`] = `
Object {
  "clues": Object {
    "SUMP": "I'm ___, thanks for asking\\\\!",
    "SUPER": "Until",
  },
  "grid": Array [
    ".",
    "S",
    ".",
    ".",
    ".",
    "S",
    "U",
    "P",
    "E",
    "R",
    ".",
    "M",
    ".",
    "R",
    ".",
    ".",
    "P",
    "I",
    "E",
    ".",
  ],
  "height": 4,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "Reference PUZ File",
  "width": 5,
}
`;

exports[`test .puz import version-1.2-puzzle-with-notes 1`] = `
Object {
  "clues": Object {
    "ERE": "This is a test note for this version 1.2 puzzle",
    "SUMP": "I'm ___, thanks for asking\\\\!",
    "SUPER": "Until",
  },
  "grid": Array [
    ".",
    "S",
    ".",
    ".",
    ".",
    "S",
    "U",
    "P",
    "E",
    "R",
    ".",
    "M",
    ".",
    "R",
    ".",
    ".",
    "P",
    "I",
    "E",
    ".",
  ],
  "height": 4,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "Reference PUZ File",
  "width": 5,
}
`;

exports[`test .puz import washpost 1`] = `
Object {
  "clues": Object {
    "ABUT": "Touch",
    "AEGIS": "Protection",
    "AERIE": "Eagle's nest",
    "ALEE": "On the sheltered side",
    "ARIA": "Caruso solo",
    "ARTS": "Part of NEA",
    "AVATAR": "On-line game character",
    "AXE": "Paul Bunyan's tool",
    "AXIOM": "\\"There's no such thing as a free lunch,\\" e.g.",
    "BLEEP": "Censor",
    "CARVE": "Cut, as a turkey",
    "COQAUVIN": "French chicken dish",
    "DECANT": "Draw off sherry",
    "DOS": "Old Microsoft product",
    "EARP": "Holliday's marshal friend",
    "EEL": "Shocking swimmer",
    "EMBEDDED": "Like some wartime journalists",
    "ESCAPEATTENTION": "Go unnoticed",
    "ESE": "Jargon suffix",
    "ETA": "LAX listing",
    "ETTU": "Rebuke to a backstabber",
    "FIRESTORM": "Outburst of controversy",
    "FOAM": "Insulation material",
    "FRINGE": "Green edge",
    "GUIDEPOST": "Direction giver",
    "HOOP": "NBA target",
    "HOPEANDFAITH": "Current sitcom set in Cleveland",
    "HTTP": "URL starter",
    "HUSHUP": "Keep quiet",
    "IDLE": "On strike",
    "IOWA": "Big Ten school",
    "IRANI": "Shiraz citizen",
    "JEFE": "Boss, usually following \\"El\\"",
    "JIM": "Former NFL quarterback Kelly or Harbaugh",
    "KTEL": "Record company name now licensed to an on-line pharmaceutical company",
    "LAMB": "Mary's pet",
    "LAPSE": "Fall into disuse",
    "LBJ": "\\"All the way with ___\\" (political slogan)",
    "LOFT": "Hit high in the air",
    "MAJOR": "Very important",
    "MARK": "Simplified signature",
    "MAT": "Exercise accessory",
    "MAUDE": "Bea Arthur sitcom",
    "NILE": "West ___ virus",
    "OBIES": "Theater awards",
    "OPT": "Choose",
    "ORAL": "Kind of history",
    "OTO": "Ally of the Missouri",
    "PANOUT": "Succeed",
    "PERFORMS": "Sings and dances",
    "PHD": "Graduate prog. award",
    "PIC": "JPEG file, often",
    "PLOW": "Tractor attachment",
    "POEM": "Haiku, for one",
    "PRESTO": "Magic word",
    "QUOTE": "Cite",
    "RIO": "1983 Duran Duran hit",
    "ROOK": "Chess corner piece",
    "RUES": "Regrets",
    "SAID": "Spoken",
    "SAKE": "Drink with sushi",
    "SATSCORE": "College admission factor",
    "SEED": "Bit of bird chow",
    "SHAKE": "Get rid of",
    "SNUG": "Warm and cozy",
    "SOAP": "Word before bubble or opera",
    "SOP": "Make soaking wet",
    "SPAT": "Disagreement",
    "SPF": "Tanning lotion tube letters",
    "STAINS": "Soiled spots",
    "STE": "___ Anne de Beaupré",
    "SWAT": "Police team",
    "TAKEASWIPEAT": "Aim for",
    "TEMPS": "Office aides",
    "TEMPT": "Entice",
    "TSAR": "Lenin foe",
    "TUNERS": "Signal receivers",
    "VET": "Doggy doc",
  },
  "grid": Array [
    "L",
    "A",
    "M",
    "B",
    ".",
    "S",
    "P",
    "A",
    "T",
    ".",
    "C",
    "A",
    "R",
    "V",
    "E",
    "O",
    "R",
    "A",
    "L",
    ".",
    "A",
    "L",
    "E",
    "E",
    ".",
    "O",
    "B",
    "I",
    "E",
    "S",
    "F",
    "I",
    "R",
    "E",
    "S",
    "T",
    "O",
    "R",
    "M",
    ".",
    "Q",
    "U",
    "O",
    "T",
    "E",
    "T",
    "A",
    "K",
    "E",
    "A",
    "S",
    "W",
    "I",
    "P",
    "E",
    "A",
    "T",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    "P",
    "I",
    "C",
    ".",
    "E",
    "T",
    "T",
    "U",
    ".",
    "S",
    "P",
    "F",
    "P",
    "H",
    "D",
    ".",
    "D",
    "O",
    "S",
    ".",
    ".",
    "A",
    "V",
    "A",
    "T",
    "A",
    "R",
    "R",
    "U",
    "E",
    "S",
    ".",
    "R",
    "O",
    "O",
    "K",
    ".",
    "I",
    "R",
    "A",
    "N",
    "I",
    "E",
    "S",
    "C",
    "A",
    "P",
    "E",
    "A",
    "T",
    "T",
    "E",
    "N",
    "T",
    "I",
    "O",
    "N",
    "S",
    "H",
    "A",
    "K",
    "E",
    ".",
    "P",
    "O",
    "E",
    "M",
    ".",
    "S",
    "N",
    "U",
    "G",
    "T",
    "U",
    "N",
    "E",
    "R",
    "S",
    ".",
    ".",
    "L",
    "B",
    "J",
    ".",
    "S",
    "T",
    "E",
    "O",
    "P",
    "T",
    ".",
    "F",
    "O",
    "A",
    "M",
    ".",
    "E",
    "E",
    "L",
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
    "H",
    "O",
    "P",
    "E",
    "A",
    "N",
    "D",
    "F",
    "A",
    "I",
    "T",
    "H",
    "M",
    "A",
    "J",
    "O",
    "R",
    ".",
    "G",
    "U",
    "I",
    "D",
    "E",
    "P",
    "O",
    "S",
    "T",
    "A",
    "X",
    "I",
    "O",
    "M",
    ".",
    "I",
    "D",
    "L",
    "E",
    ".",
    "S",
    "W",
    "A",
    "T",
    "T",
    "E",
    "M",
    "P",
    "S",
    ".",
    "S",
    "E",
    "E",
    "D",
    ".",
    "E",
    "A",
    "R",
    "P",
  ],
  "height": 15,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "December 6, 2005 - \\"Split Pea Soup\\"",
  "width": 15,
}
`;

exports[`test .puz import wsj110624 1`] = `
Object {
  "clues": Object {
    "ABALONE": "Conch cousin",
    "AGOG": "Waiting with bated breath",
    "AGUILERA": "Christina of \\"The Voice\\"",
    "AHOME": "\\"Oh, give me ___...\\"",
    "AIL": "Have something",
    "ALIKES": "Look-___ (twins)",
    "ALOE": "Soap additive",
    "AMISH": "\\"Witness\\" group",
    "ANISETTE": "Ouzo relative",
    "APTER": "More fitting",
    "ARK": "Gopher wood craft",
    "ASIAN": "Like three out of five people",
    "ASS": "Jerk",
    "ASSETS": "Some are liquid",
    "ASSN": "Org.",
    "ASSORTED": "Like chocolates in a sampler",
    "ASSURE": "Guarantee",
    "ATECROW": "Had a helping of humble pie",
    "AVERSE": "Resistant",
    "AVIV": "Tel ___",
    "BEET": "Borscht bit",
    "BIPED": "Man, for one",
    "BOASTFUL": "Full of oneself",
    "BRIE": "Camembert cousin",
    "BROKENRECORD": "Good news for an Olympic athlete, bad news for a disc jockey",
    "CACTI": "Desert flora",
    "CARVED": "Did the honors on Thanksgiving",
    "CENTRE": "Middle of Manchester",
    "CHEMICAL": "Dow product",
    "CLASE": "Spanish teacher's group",
    "COEN": "Name in the \\"True Grit\\" credits",
    "COPTS": "Egyptian Christians",
    "COPY": "Text",
    "COVALENT": "Like some bonds",
    "CUOMO": "New York governor",
    "DALMATIA": "Croatian area known for a breed of dog",
    "DEA": "Justice Dept. division",
    "DOGSLED": "Iditarod sight",
    "EGRET": "Snowy bird",
    "EINS": "German count start",
    "ELIAS": "Literature Nobelist Canetti",
    "ENGR": "Many an RPI grad",
    "ENTENTE": "International accord",
    "ENTROPY": "Tendency toward disorder",
    "EPICPOET": "Virgil, for one",
    "ERN": "East ender",
    "ERNANI": "Verdi title bandit",
    "ETO": "DDE's bailiwick",
    "EUROPE": "Iron Curtain setting",
    "EXISTED": "Had a life",
    "EXPENSIVETICKETS": "Good news for concert producers, bad news for speeders",
    "FAIRS": "State expos",
    "FLEA": "Little biter",
    "GAPE": "Stare",
    "GASSTOVE": "Pilot's place",
    "GAWK": "Stare stupidly",
    "GEARED": "Outfitted",
    "GETTINGAFLAT": "Good news for a British apartment seeker, bad news for a motorist",
    "GINS": "Cotton contraptions",
    "GONGS": "They're hit with hammers",
    "HOUSEWORK": "Good news for a real estate developer, bad news for a mom",
    "IHOPE": "Wishful words",
    "INASTIR": "Agitated",
    "INON": "Advised about",
    "IPO": "Wall St. event",
    "IRAE": "\\"Dies ___\\"",
    "IRONS": "\\"The Borgias\\" star",
    "IRV": "Hip-hop producer Gotti",
    "ITSA": "Start of a baby announcement",
    "JAILER": "Bar tender?",
    "JINX": "Hex",
    "KLEIN": "Designer Calvin",
    "LEOG": "\\"Topper\\" star Carroll",
    "LIU": "Lucy of \\"Kill Bill\\"",
    "LONER": "Hardly the gregarious sort",
    "LONGDRIVE": "Good news for a golfer, bad news for a commuter",
    "LORNE": "Michaels of \\"SNL\\"",
    "LOSINGAFEWPOUNDS": "Good news for a dieter, bad news for a London gambler",
    "LOWINFLATION": "Good news for those on fixed incomes, bad news for bike tires",
    "MERE": "Insignificant",
    "MESMER": "Hypnotism pioneer Franz",
    "MIAMI": "Heat home",
    "MOVER": "He'll help you get carried away",
    "NCR": "ATM-making co.",
    "NEXTCASE": "Night court call",
    "NINES": "Baseball teams",
    "NOD": "Silent say-so",
    "NOWI": "Start of a bedtime prayer",
    "OBOEPART": "The duck, in \\"Peter and the Wolf\\"",
    "OBTAINED": "Got",
    "ONE": "Half and half",
    "ONYXES": "Banded stones",
    "ORSINO": "He says \\"If music be the food of love, play on\\"",
    "PEER": "Equal",
    "PENA": "Clinton cabinet member Federico",
    "POSSE": "Oater chasers",
    "PRONE": "Liable",
    "PROS": "Supporting arguments",
    "PUEBLO": "Colorado city",
    "PXS": "Base stores, in brief",
    "REDINK": "Shortfall indicator",
    "RENAULT": "Maker of Clios and Kangoos",
    "RENE": "Lacoste of tennis",
    "REVERSED": "Overturned on appeal",
    "RISE": "Escalation",
    "ROPERS": "Cowboys, at times",
    "RRS": "Monopoly quartet: Abbr.",
    "RUERS": "Sorry folks",
    "SANER": "Having more marbles",
    "SAT": "Looked after Junior",
    "SEEN": "On display",
    "SEL": "Pinch for le chef",
    "SHINE": "Stand out",
    "SHOWS": "Broadway fare",
    "SILENT": "Like some partners",
    "SIS": "Spanish ayes",
    "SITBACK": "Take no action",
    "SKI": "Go downhill",
    "SLIMES": "Attacks a la \\"Ghostbusters\\"",
    "SOLAR": "Like some panels",
    "SONY": "99-Across maker",
    "SORER": "Twice as annoyed",
    "STEVIE": "Wonder who's in the Rock and Roll Hall of Fame",
    "STUCK": "Immobile",
    "TAOS": "New Mexico art colony",
    "TEE": "Ball point?",
    "THREESTRIKES": "Good news for a pitcher, bad news for labor management",
    "TRAIL": "Have some catching up to do",
    "TROUT": "Lake dweller",
    "TRUCE": "It's called between combatants",
    "TWAIN": "Mark with a mustache",
    "UMP": "Expert on plays",
    "USEDCAR": "Lemon, possibly",
    "USUAL": "Everyday",
    "VAIO": "Personal computer brand",
    "VAMPIRES": "They go for a bite at night",
    "WISED": "Smartened (up)",
    "WONTON": "Cantonese kreplach",
  },
  "grid": Array [
    "D",
    "O",
    "G",
    "S",
    "L",
    "E",
    "D",
    ".",
    "A",
    "G",
    "U",
    "I",
    "L",
    "E",
    "R",
    "A",
    ".",
    "A",
    "G",
    "O",
    "G",
    "A",
    "B",
    "A",
    "L",
    "O",
    "N",
    "E",
    ".",
    "V",
    "A",
    "M",
    "P",
    "I",
    "R",
    "E",
    "S",
    ".",
    "M",
    "E",
    "R",
    "E",
    "L",
    "O",
    "S",
    "I",
    "N",
    "G",
    "A",
    "F",
    "E",
    "W",
    "P",
    "O",
    "U",
    "N",
    "D",
    "S",
    ".",
    "I",
    "T",
    "S",
    "A",
    "M",
    "E",
    "S",
    "M",
    "E",
    "R",
    ".",
    "A",
    "R",
    "K",
    ".",
    ".",
    ".",
    ".",
    "I",
    "N",
    "A",
    "S",
    "T",
    "I",
    "R",
    "A",
    "P",
    "T",
    "E",
    "R",
    ".",
    "S",
    "I",
    "S",
    ".",
    "A",
    "S",
    "I",
    "A",
    "N",
    ".",
    "S",
    "H",
    "I",
    "N",
    "E",
    "T",
    "A",
    "O",
    "S",
    ".",
    "T",
    "H",
    "R",
    "E",
    "E",
    "S",
    "T",
    "R",
    "I",
    "K",
    "E",
    "S",
    ".",
    "N",
    "O",
    "D",
    "I",
    "R",
    "V",
    ".",
    "P",
    "R",
    "O",
    "S",
    ".",
    "U",
    "S",
    "U",
    "A",
    "L",
    ".",
    "L",
    "E",
    "O",
    "G",
    ".",
    ".",
    "A",
    "T",
    "E",
    "C",
    "R",
    "O",
    "W",
    ".",
    "T",
    "R",
    "U",
    "C",
    "E",
    ".",
    "S",
    "I",
    "T",
    "B",
    "A",
    "C",
    "K",
    ".",
    ".",
    ".",
    "H",
    "O",
    "U",
    "S",
    "E",
    "W",
    "O",
    "R",
    "K",
    ".",
    "B",
    "O",
    "A",
    "S",
    "T",
    "F",
    "U",
    "L",
    "S",
    "I",
    "L",
    "E",
    "N",
    "T",
    ".",
    "G",
    "A",
    "P",
    "E",
    ".",
    "G",
    "I",
    "N",
    "S",
    ".",
    "A",
    "L",
    "O",
    "E",
    "A",
    "H",
    "O",
    "M",
    "E",
    ".",
    "B",
    "R",
    "I",
    "E",
    ".",
    "C",
    "O",
    "P",
    "Y",
    ".",
    "M",
    "I",
    "A",
    "M",
    "I",
    "N",
    "O",
    "W",
    "I",
    ".",
    "S",
    "E",
    "E",
    "N",
    ".",
    "R",
    "E",
    "N",
    "E",
    ".",
    "W",
    "O",
    "N",
    "T",
    "O",
    "N",
    "E",
    "P",
    "I",
    "C",
    "P",
    "O",
    "E",
    "T",
    ".",
    "L",
    "O",
    "N",
    "G",
    "D",
    "R",
    "I",
    "V",
    "E",
    ".",
    ".",
    ".",
    "R",
    "E",
    "N",
    "A",
    "U",
    "L",
    "T",
    ".",
    "C",
    "O",
    "P",
    "T",
    "S",
    ".",
    "U",
    "S",
    "E",
    "D",
    "C",
    "A",
    "R",
    ".",
    ".",
    "F",
    "L",
    "E",
    "A",
    ".",
    "S",
    "O",
    "R",
    "E",
    "R",
    ".",
    "P",
    "E",
    "E",
    "R",
    ".",
    "O",
    "N",
    "E",
    "S",
    "E",
    "L",
    ".",
    "B",
    "R",
    "O",
    "K",
    "E",
    "N",
    "R",
    "E",
    "C",
    "O",
    "R",
    "D",
    ".",
    "A",
    "V",
    "I",
    "V",
    "T",
    "R",
    "A",
    "I",
    "L",
    ".",
    "N",
    "I",
    "N",
    "E",
    "S",
    ".",
    "A",
    "S",
    "S",
    ".",
    "C",
    "L",
    "A",
    "S",
    "E",
    "E",
    "N",
    "T",
    "R",
    "O",
    "P",
    "Y",
    ".",
    ".",
    ".",
    ".",
    "R",
    "R",
    "S",
    ".",
    "J",
    "A",
    "I",
    "L",
    "E",
    "R",
    "V",
    "A",
    "I",
    "O",
    ".",
    "E",
    "X",
    "P",
    "E",
    "N",
    "S",
    "I",
    "V",
    "E",
    "T",
    "I",
    "C",
    "K",
    "E",
    "T",
    "S",
    "I",
    "N",
    "O",
    "N",
    ".",
    "N",
    "E",
    "X",
    "T",
    "C",
    "A",
    "S",
    "E",
    ".",
    "E",
    "N",
    "T",
    "E",
    "N",
    "T",
    "E",
    "E",
    "I",
    "N",
    "S",
    ".",
    "A",
    "S",
    "S",
    "O",
    "R",
    "T",
    "E",
    "D",
    ".",
    "E",
    "X",
    "I",
    "S",
    "T",
    "E",
    "D",
  ],
  "height": 21,
  "highlight": "circle",
  "highlighted": Array [],
  "title": "June 24, 2011 - Good News, Bad News",
  "width": 21,
}
`;

exports[`test error on copyright 1`] = `"Cannot import copyrighted puzzles"`;

exports[`test error on locked 1`] = `"Cannot import scrambled .puz files"`;
